--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -34,10 +34,35 @@ Make-Set(5)
 Union(1, 2)
 ```
 
+![image](https://github.com/user-attachments/assets/f5679495-09d6-464a-b869-2418e1e82298)
 
+<br/>
 
+## 상호 배타적 집합 알고리즘 
 
+```ruby
+CONNECTED-COMPONENTS(G)
+for each vertex v ∈ G.V
+    MAKE-SET(v)
+for each edge (u, v) ∈ G.E
+    if FIND-SET(u) ≠ FIND-SET(v)
+        UNION(u, v)
 
+SAME-COMPONENT(u, v)
+if FIND-SET(u) == FIND-SET(v)
+    return TRUE
+else return FALSE
+```
+
+- G는 그래프(Graph) 전체를 의미
+
+- V는 그래프 G의 정점(Vertex)의 집합 (ex: 정점이 a, b, c, ..., j 라면 V = {a, b, c, ..., j})
+
+- E는 그래프 G의 간선(Edge)의 집합 (ex: 간선이 {(a, b), (b, c), (e, f)} 등이라면 E = {(a, b), (b, c), (e, f)})
+
+위 코드에서 G.V는 그래프의 정점을 의미
+
+또한, if FIND-SET(u) ≠ FIND-SET(v) 이 구문에서는 각각 간선을 비교하여 연결되어 있는지 확인하는 조건문이다 
 
 
 
