--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -8,12 +8,32 @@
 
 ## 관련 연산 
 
-- Make-Set(x) : 원소 x만 포함하는 집합을 생성함. 초기에는 모든 원소가 각각의 집합에 속한다
+**1. Make-Set(x)**
 
-- Find-Set(x) :  원소 x가 속한 집합의 대표 원소를 반환. 
+- 노드 x를 생성하고 대표 노드를 자기 자신으로 설정
 
-- Union(x, y) : 원소 x가 포함된 집합과 원소 y가 포함된 집합을 병합하여 하나의 집합으로 만듦
+- 자기 자신을 가리키는 포인터를 저장함
 
+- 연결 리스트의 끝(next)은 NIL로 설정
+
+<br/>
+
+**2. Find-Set(x)**
+
+- 노드 x의 대표 노드에 대한 포인터를 반환함
+
+- 모든 노드가 대표를 가리키고 있기 때문에 빠름 (O(1))
+
+<br/>
+
+**3. Union(x, y)**
+
+- x와 y가 속한 리스트를 병합
+
+- 일반적으로 x의 리스트 뒤에 y의 리스트를 붙임
+
+- 이때, y 쪽 리스트의 모든 노드의 대표 포인터를 x의 대표로 업데이트를 해야하는데 **이 작업이 비효율의 원인**
+ 
 <br>
 
 ## 간단한 예시 
