--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -84,12 +84,31 @@ else return FALSE
 
 또한, if FIND-SET(u) ≠ FIND-SET(v) 이 구문에서는 각각 간선을 비교하여 연결되어 있는지 확인하는 조건문이다 
 
+<br/>
 
+## 시간복잡도 문제 
 
+일반적으로 Union(x, y)의 과정은 다음과 같다 
 
+![image](https://github.com/user-attachments/assets/1496e073-520c-41cf-aaf4-1d399dee7bd5)
 
+첫번째 집합의 tail를 두번째 집합의 가장 앞 원소에게 지정하고, 두번째 원소의 모든 요소가 첫번째 원소의 대표 원소에게 포인터를 지정해야한다 
 
+이 과정의 최악의 경우는 아래와 같이 O(n²)만큼 소요된다 
 
+![image](https://github.com/user-attachments/assets/5ea6bcd2-50dd-4407-b0c6-5ebdc0b4dfd3)
+
+위 알고리즘을 보면 n개의 원소를 Make-set()를 실행해도, 시간복잡도는 O(1)를 n번 한 것이므로 괜찮지만 
+
+이후 union의 과정은 다음과 같이 O(n²)만큼 소요된다
+
+1. Union(x2,x1) : x1이 x2에게 대표 원소 ... 1회 업데이트
+
+2. Union(x3,x2) : x1과 x2가 x3에게 대표 원소 ... 2회 업데이트 
+
+3. Union(x4,x3) : x1과 x2가 x가 x4에게 대표 원소 ... 3회 업데이트 
+
+위 과정을 반복하면, 1 + 2 + .. + (n-1) 이고 시그마 공식을 사용하면 1/2(n²+n)만큼 소요 되어 빅 오 표기법으로 계산하면 O(n²)가 된다 
 
 
 
