--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -110,10 +110,39 @@ else return FALSE
 
 위 과정을 반복하면, 1 + 2 + .. + (n-1) 이고 시그마 공식을 사용하면 1/2(n²+n)만큼 소요 되어 빅 오 표기법으로 계산하면 O(n²)가 된다 
 
+이러한 문제점을 아래에서 소개할 **Weighted Union 기법으로 해결할 수 있다**
 
+<br/>
 
+## Weighted Union
 
+핵심 아이디어: **항상 더 짧은 리스트를 더 긴 리스트 뒤에 붙인다**
 
+<br/>
+
+연결 리스트를 이용해 표현되는 배타적 집합에서 무게를 고려한 Union을 사용할 때,
+
+m번의 Make-Set, Union, Find-Set 연산 중 n번이 Make-Set이라면,
+
+이들의 총 수행 시간은 O(m + n log n)이다
+
+이는 아래에서 증명을  보이겠다 
+
+<br/>
+
+**증명 과정**
+
+먼저 Make-Set 및 Find-Set은 𝑂(1)이고 이 둘을 합쳐도 𝑚을 넘지 않으므로, 두 개의 시간 복잡도를 𝑂(𝑚)으로 둘 수 있다 
+
+Union은 리스트를 연결하는 작업은𝑂(1)이지만 대표 노드를 갱신하는 과정은 더 오래 걸릴 수 있다 
+
+두 리스트 중 작은 짧은 리스트가 항상 긴 리스트에 붙기 때문에 짧은 리스트를 기준으로 보면 **항상 자신의 리스트의 길이에 2배 이상이 된다**(결합하는 대상이 자신보다 더 길기 때문)
+
+즉, union을 할 때, 적어도 짧은 리스트의 2배가 일어난다는 것이고 (1 → 2 → 4 → 8 → 16 → 32 → ...)
+
+이는 전체가 n개인 요소를 모두 묶는데 업데이트가 기껏해야 log₂(n) 만큼 걸린다는 것이다 (전체는 n이고 , 묶을 때마다 2배 이상의 업데이트를 하지 않기 때문)
+
+따라서 총 n개의 원소를 업데이트 하는데 nlog₂(n)만큼 걸리고 최종적으로 즉, 전체 시간은 𝑂(𝑚+𝑛log𝑛)이 된다 (m은 맨 위에서 증명)
 
 
 
