--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -177,12 +177,12 @@ Make-Set(x)   ▷ 노드 x를 유일한 원소로 하는 집합을 만든다
 }
 
 Union(x, y)   ▷ 노드 x가 속한 집합과 노드 y가 속한 집합을 합친다
-{
+{             ▷ y의 루트를 x의 루트 밑에 붙임
     p[Find-Set(y)] ← Find-Set(x) ;
 }
 
-Find-Set(x)   ▷ 노드 x가 속한 집합을 알아낸다
-              ▷ 노드 x가 속한 트리의 루트 노드를 리턴한다
+Find-Set(x)   ▷ 노드 x가 속한 집합을 알아낸다 x -> p.x -> p.p.x ...
+              
 {
     if (x = p[x])
         then return x ;
