--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -190,8 +190,25 @@ Find-Set(x)   ▷ 노드 x가 속한 집합을 알아낸다 x -> p.x -> p.p.x ..
 }
 ```
 
+![image](https://github.com/user-attachments/assets/dadf3e85-5196-44d8-871e-3112b8891829)
 
+<br/>
 
+앞서 다룬 연산들만으로는 연결 리스트를 이용한 표현 방식과 비교하여 연산 효율 측면에서 더 나아지지 않는다
+
+이것을 해결하기 위해 연산 효율을 높이는 두 가지 방법을 소개하겠다 
+
+**1. 랭크를 이용한 Union**
+
+- 각 노드는 자신을 루트로 하는 서브트리의 높이를 랭크(Rank)라는 이름으로 저장한다
+
+- 두 집합을 합칠 때 랭크가 낮은 집합을 랭크가 높은 집합에 붙인다
+
+<br/>
+
+**경로압축**
+
+- Find-Set을 행하는 과정에서 만나는 모든 노드들이 직접 루트를 가리키도록 포인터를  바꾸어 준다
 
 
 
