--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -204,13 +204,23 @@ Find-Set(x)   ▷ 노드 x가 속한 집합을 알아낸다 x -> p.x -> p.p.x ..
 
 - 두 집합을 합칠 때 랭크가 낮은 집합을 랭크가 높은 집합에 붙인다
 
+- 만약 랭크가 동일하다면, 한쪽을 밑에 붙이고, 루트의 랭크를 +1 증가시킨다(랭크가 동일하지 않다면, 연산 후 **절대 랭크가 바뀔 수 없음**)
+
+![스크린샷 2025-04-18 175931](https://github.com/user-attachments/assets/7ff78a91-e873-4b23-ae7a-d1a020e7a783)
+
+![스크린샷 2025-04-18 175939](https://github.com/user-attachments/assets/abf01028-fddd-44ce-acf1-14a1f912006d)
+
 <br/>
 
 **경로압축**
 
 - Find-Set을 행하는 과정에서 만나는 모든 노드들이 직접 루트를 가리키도록 포인터를  바꾸어 준다
 
+아래 예시를 보면 g → e → h → c였지만 Find-Set(g)를 하면 g로부터 루트까지 이어진 모든 원소가 모두 다 분리되어 루트를 가리킴
 
+![스크린샷 2025-04-18 180004](https://github.com/user-attachments/assets/b8eeb2cd-3817-4000-b1f3-12a604fc419d)
+
+![스크린샷 2025-04-18 180010](https://github.com/user-attachments/assets/f6e653e5-9f48-45b0-982a-3c13fde041c5)
 
 
 
