--- a/알고리즘 7-1주차.md
+++ b/알고리즘 7-1주차.md
@@ -212,7 +212,7 @@ Find-Set(x)   ▷ 노드 x가 속한 집합을 알아낸다 x -> p.x -> p.p.x ..
 
 <br/>
 
-**경로압축**
+**경로 압축(Path Compression)**
 
 - Find-Set을 행하는 과정에서 만나는 모든 노드들이 직접 루트를 가리키도록 포인터를  바꾸어 준다
 
@@ -221,6 +221,37 @@ Find-Set(x)   ▷ 노드 x가 속한 집합을 알아낸다 x -> p.x -> p.p.x ..
 ![스크린샷 2025-04-18 180004](https://github.com/user-attachments/assets/b8eeb2cd-3817-4000-b1f3-12a604fc419d)
 
 ![스크린샷 2025-04-18 180010](https://github.com/user-attachments/assets/f6e653e5-9f48-45b0-982a-3c13fde041c5)
+
+<br/>
+
+## rank + 경로 압축 알고리즘 
+
+```ruby
+Make-Set(x)      ▷ 노드 x를 유일한 원소로 하는 집합을 만든다
+{
+    p[x] ← x;
+    rank[x] ← 0;
+}
+
+Find-Set(x)      ▷ 노드 x가 포함된 트리의 루트를 리턴한다
+{
+    if (p[x] ≠ x) then p[x] ← Find-Set(p[x]);
+    return p[x];
+}
+
+Union(x, y)      ▷ 노드 x가 속한 집합과 노드 y가 속한 집합을 합친다
+{
+    x′ ← Find-Set(x);
+    y′ ← Find-Set(y);
+
+    if (rank[x′] > rank[y′])
+        then p[y′] ← x′;
+    else {
+        p[x′] ← y′;
+        if (rank[x′] = rank[y′]) then rank[y′] ← rank[y′] + 1;
+    }
+}
+```
 
 
 
