Update 알고리즘 1주차 .md

--- a/알고리즘 1주차 .md
+++ b/알고리즘 1주차 .md
@@ -401,6 +401,14 @@ print(fibo(n))
 
 시간 복잡도: O(2^N)
 
+하지만, 만약 n이 5일 때 시간 복잡도의 계산은 32번 연산을 수행하지만, 실제로 fibo(5)는 연산을 9번만 수행한다.  
+
+이렇게 차이가 나는 이유는 fibo(n)은 중복 호출이 많기 때문에 지수적으로 커지고 Big-O 표기법은 최악의 경우를 가정하기 때문이다
+
+관계성을 보면 계속 2의 n제곱 형태로 나아가고 있음
+
+즉, 최악의 경우 시간 복잡도는 O(2^n)이지만, **실제 호출 횟수는 그보단 작다**
+
 <br/>
 
 ## Big Omega notation
