--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -127,6 +127,35 @@ ex)
 
 <br/>
 
+또한 병합 정렬은 처음 분리를 하는 리스트를 루트 노드라고 하면 루트 노드의 왼쪽 서브트리가 모두 정렬이 되고, 이후 오른족 서브 트리가 모두 정렬이 되는 방식이다 
+
+**예시**
+```ruby
+ merge(1,4,8)
+                          /            \
+              merge(1,2,4)              merge(5,6,8)
+             /           \             /           \
+    merge(1,1,2)      merge(3,3,4)  merge(5,5,6)   merge(7,7,8)
+     /     \           /     \      /     \         /     \
+ (1,1)   (2,2)     (3,3)   (4,4)  (5,5)  (6,6)    (7,7)   (8,8)
+```
+
+1. (1,1), (2,2) → merge(1,1,2)
+
+2. (3,3), (4,4) → merge(3,3,4)
+
+3. merge(1,2,4) ← 왼쪽 하위 병합 완료
+
+4. (5,5), (6,6) → merge(5,5,6)
+
+5. (7,7), (8,8) → merge(7,7,8)
+
+6. merge(5,6,8) ← 오른쪽 하위 병합 완료
+
+7. merge(1,4,8) ← 최종 병합
+
+<br/>
+
 ## 점화식의 점근적 분석 방법 종류 
 
 1. **반복 대치** : 점화식을 더 작은 문제에 대한 함수로 반복해서 대치해나가며 분석하는 방법
