--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -281,6 +281,16 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 ![스크린샷 2025-03-25 114623](https://github.com/user-attachments/assets/f5de7276-e9f7-4d42-9fac-e738dac263e6)
 
+위 과정에서 logn을 m으로 치환한 이유는 **마스터 정리를 쓰기 위함이다**
+
+마스터 정리 공식을 보면 logn부분은 f(n)을 의미하는데 f(n)/h(n)이 다항식의 비율로 비교해야하기 때문에 m으로 바꾼 것이다 
+
+이 과정을 통해 T(n)을 T(2^m)로 표현할 수 있고, **이를 새 함수 S(m)으로 정의한 것이다** (기존 공식에서 치환한 m은 그대로 사용함. **T만 재정의한 것이기 때문**)
+
+<br/>
+
+이후 마스터 정리를 사용할 수 있고 마지막 Θ(mlogm)에서 **m은 우라기 만들어낸 변수이므로 원래대로 돌려놓아야한다**
+
 <br/>
 
 ## 퀴즈 1 
