--- a/알고리즘 2-2주차.md
+++ b/알고리즘 2-2주차.md
@@ -237,6 +237,8 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 ## 마스터 정리 
 
+**a ≥ 1, b > 1**
+
 ![image](https://github.com/user-attachments/assets/e6c3c7c3-01dd-4b25-a815-00a717c8c931)
 
 <br/>
@@ -267,9 +269,14 @@ c는 어떤 상수이고, log 2 = 1 이므로 T(2) ≤ 2c이다 이때, T(2)는 
 
 재귀적 호출의 소요시간이 오버헤드를 압도한다면 알고리즘의 수행시간은 h(n)이 결정
 
-반대로 오버헤드가 더 크다면 f(n)이 알고리즘의 수행시간을 결정함
+반대로 오버헤드가 더 크다면 **f(n)이 알고리즘의 수행시간을 결정함**
 
 <br/>
+
+또한, T(n) = T(n-1) + n 이런 점화식은 n/b 꼴이 아니라 n-1 꼴이기 때문에 마스터 정리를 사용할 수 없다 (**a ≥ 1, b > 1**)
+
+<br/>
+
 
 ## 마스터 정리 적용 예시 
 
