--- a/알고리즘 3-2주차.md
+++ b/알고리즘 3-2주차.md
@@ -160,6 +160,12 @@ partition(A[], p, r)
 
 반면 퀵정렬은 처음에 기준원소에 대해 정렬한 이후에는 비교적 국소적인 부분을 대상으로 정렬을  수행하므로 cache hit ratio(찾고자 하는 정보가 캐쉬에 있을 확률)이 높아져 데이터 접근이 빠름
 
+이게 무슨 의미냐면 병합 정렬을 merge로 병합하는 과정에서 두 개의 배열을 번갈아가며 비교함. **이때 번갈아가는 과정에서 cache의 역할의 의미가 없어진다** 
+
+반면에 퀵 정렬은 partition을 수행하면, 한 배열 내부에서 지속적으로 비교하여 **cache을 효율적으로 사용할 수 있다**
+
+<br/>
+
 따라서 알고리즘 상으로 분석할 때는 병합정렬이 더 우수해 보이지만 실제로 사용하는 컴퓨터 구조 상에서의 연산 속도 측면에서 퀵정렬이 일반적으로는 더 우위에 있음
 
 또한 퀵정렬은 주어진 배열 공간만으로 정렬이 가능하고 병합정렬은 추가적인 메모리가 필요함
