--- a/알고리즘 3-2주차.md
+++ b/알고리즘 3-2주차.md
@@ -168,11 +168,19 @@ partition(A[], p, r)
 
 따라서 알고리즘 상으로 분석할 때는 병합정렬이 더 우수해 보이지만 실제로 사용하는 컴퓨터 구조 상에서의 연산 속도 측면에서 퀵정렬이 일반적으로는 더 우위에 있음
 
-또한 퀵정렬은 주어진 배열 공간만으로 정렬이 가능하고 병합정렬은 추가적인 메모리가 필요함
+또한 퀵정렬은 주어진 배열 공간만으로 정렬이 가능하고 **병합정렬은 추가적인 메모리가 필요함**
 
-데이터 크기가 매우 커지는 경우에는 병합정렬이 상대적으로 성능이 더 우수한 경향을 보인다
+**데이터 크기가 매우 커지는 경우에는** 병합정렬이 상대적으로 성능이 더 우수한 경향을 보인다
+
+<br/>
 
 **하지만, linked list이면 병합 정렬이 quick보다 빠름**
+
+퀵 정렬에 대해 다시 생각해보면 pivot 기준으로 빠르게 인덱스를 옮기며 swap을 하는 방식이다
+
+하지만 연결 리스트에서는 **i번째, j번째 원소 접근 자체가 느리고**, 또한 swap도 어렵고 느리기 때문에 (포인터를 사용해서 복잡)
+
+linked list에서는 병합 정렬이 우위에 있다 
 
 <br/>
 
