--- a/알고리즘 4-1주차.md
+++ b/알고리즘 4-1주차.md
@@ -52,6 +52,16 @@ heapify(A[], k, n)   ▷ A[k]를 루트로 하는 트리를 힙 성질을 만족
         heapify(A,bigger,n);
     }
 }
+
+heapSort(A[ ], n) ▷ A[1 ... n]을 정렬한다
+{
+    buildHeap(A, n);            ▷ 힙 만들기
+
+    for i ← n downto 2 {        ▷ 끝에서부터 2까지 반복
+        A[1] ↔ A[i];            ▷ 최대값(A[1])과 마지막 원소 교환
+        heapify(A, 1, i - 1);   ▷ A[1...i-1] 범위에 대해 다시 힙 성질 유지
+    }
+}
 ```
 
 <br/>
