--- a/알고리즘 4-1주차.md
+++ b/알고리즘 4-1주차.md
@@ -66,7 +66,42 @@ heapSort(A[ ], n) ▷ A[1 ... n]을 정렬한다
 
 <br/>
 
-**시간복잡도 : Θ(n)**
+우선 위 코드의 목적은 A 리스트가 heap을 이용하여 오름차순 또는 내림차순으로 정렬하는 것이고, 아래는 위 과정에 대한 설명이 존재한다
+
+heapSort 함수를 보면 buildHeap 함수는 **부모-자식 관계에 대한 정렬를 한다**. 이 정렬은 **최대 최소 정렬을 의미하지 않는다**
+
+<br/>
+
+**buildHeap 정렬 후 관계**
+
+![스크린샷 2025-04-21 214937](https://github.com/user-attachments/assets/bc93d654-6e29-4e8f-8b6a-67979cc72ebb)
+
+위 이미지와 같이 buildHeap 정렬하면 k번째 인덱스의 자식은 2k와 2k+1로 구성되어 있는 **부모-자식 관계가 완성된다**
+
+또한 heapify를 실행하면 내림차순으로 정렬이 되지 않지만, 가장 앞에 있는 원소는 root. **즉, 가장 큰 값이 된다**
+
+<br/>
+
+이후 for 문에 있는 heapify를 통해 첫번째 인덱스와 마지막 n번째 인덱스를 교환한 뒤에 n-1번째 까지의 인덱스끼리 heapify를 실행하고 
+
+이것을 순차적으로 반복하는데, 이것의 목적이 바로 오름차순, 또는 내림차순으로 정렬하는 것이다(본 설명은 오름차순 기준으로 설명함)
+
+<br/>
+
+for문을 통해 heapify를 실행하면 다음 과정의 반복이다 
+
+n개 중 최대값을 맨 뒤로 -> heapify를 하여 root(가장 큰 값) 앞으로 -> n-1개 중 최대값을 맨 뒤로 -> ...
+
+위 과정으로 리스트를 정렬할 수 있다 
+
+<br/>
+
+
+**buildHeap 시간복잡도 : Θ(n)**
+
+**heapify 시간복잡도 : O(logn)** -> 원소 수가 n개인 힙의 높이는 logn이므로 heapify의 시간 복잡도는 O(logn)이다
+
+**heap sort 시간복잡도 : Θ(nlogn)**
 
 가장 아래에서부터 확인하는 이유는 부모 자식 관계에서 오류가 발생했을 때, 자식 노드를 정렬해서 가면 오류가 발생한 위치만 바꿔주면 됨 
 
