--- a/알고리즘 4-2주차.md
+++ b/알고리즘 4-2주차.md
@@ -112,7 +112,23 @@ i는 nums으로 입력 받은 값을 순서대로 가져오고, placement와 rad
 
 위 코드에서 buckets이 리스트 형태 이므로 buck의 타입도 리스트가 됨 
 
-이후 0번째 부터 차례대로 대입함 
+이후 0번째 부터 차례대로 대입함
+
+이 부분도 실수할 위험이 있어서 추가적으로 설명하도록 하겠다. 아래 코드를 다시 살펴보자 
+
+```ruby
+for b in range(RADIX):
+    buck = buckets[b]
+    for i in buck:
+        nums[a] = i
+        a += 1
+```
+
+위 코드의 진행 방식은 아래와 같다 
+
+첫번째 b값을 buck에 할당 -> nums의 0번째 원소 -> 두번째 b값을 buck에 할당 -> nums의 1번째 원소 -> ..
+
+여기서 for문을 쓰는 이유는 자릿수의 숫자가 동일한 경우 같은 리스트에 있어서 이것을 모두 꺼내기 위함이다 
 
 <br/>
 
