--- a/알고리즘 4-2주차.md
+++ b/알고리즘 4-2주차.md
@@ -210,6 +210,14 @@ for i in range(k + 1):  # k는 입력 배열의 최댓값
 
 <br/>
 
+## Counting Sort & Radix Sort 단점 
+
+- Counting Sort: 숫자나 정수형에 한정 → 비교 불가능한 문자열, 실수 등에는 사용 어렵거나 복잡함
+
+- Radix Sort: 자릿수가 있는 정수형 또는 길이가 균일한 문자열만 정렬 가능 → 범용 데이터 구조엔 부적합
+
+<br/>
+
 ## 버킷 정렬 (Bucket sort)
 
 Bucket sortor bin sort)는 데이터가 비교적 균등하게 분포되어 있는 상황에서 쓸 수 있는 O(n) 정렬임
