--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -66,7 +66,7 @@ treeSearch(t, x)
 
 <br/>
 
-## Binary Search Tree(이진 검색 트리) 검색 알고리즘 
+## Binary Search Tree(이진 검색 트리) 삽입 알고리즘 
 
 ```ruby
 treeInsert(t, x) 
