--- a/알고리즘 5-1주차.md
+++ b/알고리즘 5-1주차.md
@@ -208,6 +208,13 @@ Sketch-TreeDelete(t, r)
 
 ## Binary search tree 삭제 알고리즘 
 
+
+- t : 전체 트리의 루트 노드(root) -> 삭제 작업의 기준이 되는 전체 트리
+
+- r : 삭제할 노드 -> 실제로 트리에서 삭제되어야 할 노드
+
+- p : 삭제할 노드 r의 부모 노드(parent) -> r이 루트가 아닌 경우, p는 r의 위치를 알고 있어야 함
+- 
 ```ruby
 treeDelete(t, r, p)
 {
