--- a/알고리즘 6-1주차.md
+++ b/알고리즘 6-1주차.md
@@ -103,6 +103,12 @@ clearOverflow(r)
 
 ## B-트리 삭제 알고리즘 
 
+- t : B-트리 전체의 루트 노드 -> 삭제가 이루어질 전체 B-트리의 진입점
+
+- x  : 삭제할 키(key) -> B-트리에서 삭제하고자 하는 대상 키 값
+
+- v : x가 존재하는 노드 -> 키 x가 현재 위치하고 있는 B-트리의 노드 객체
+- 
 ```ruby
 BTreeDelete(t, x, v)
 {
