--- a/알고리즘 6-2주차.md
+++ b/알고리즘 6-2주차.md
@@ -308,6 +308,14 @@ chainedHashDelete(T[ ], x)
 
 첫 충돌에는 위치가 +1 그 다음은 +4, 그 다음은 +9, ... + i^2 으로 기하급수적으로 옮김 -> 빠르게 처음 해시 영역을 벗어남 
 
+예를 들면, 위 이미지처럼 30의 해시 함수 값이 4이고, 해당 4번 주소에서 충돌이 발생했을 때, 계산은 다음과 같이 진행한다 
+
+- (4) mod 13 -> 충돌 없음
+
+- (4 + 1^2) mod 13 -> 첫번째 충돌, 값 = 5
+
+- (4 + 2^2) mod 13 -> 두번째 충돌, 값 = 8
+
 <br/>
 
 ## 이차원 조사 문제점 
