--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -8,4 +8,4 @@
 
 최적 부분 구조를 피보나치 수열로 예를 들면, fib(5) = fib(4) + fib(3)으로 나눠질 때, fib(4)와 fib(3)를 구하려면 더 내려가야하고 fib(2) 또는 fib(1)에 도달했을 때 값을 구하는 구조를 의미한다 
 
-중요한 것은 **해답이 존재해야** 최적 부분 구조라는 것이다
+중요한 것은 식을 쪼갠 다음에 각각 **작은 문제의 최적 답**만 잘 모으면 해답이 존재하는 것이 최적 부분 구조이다
