--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -40,7 +40,7 @@
 
 이렇게 되면 만약 f[10]을 구할 때 f[9]와 f[8]이 필요하고, 이 값들은 이미 아래서부터 계산이 되어 저장을 시키며 올라왔기 때문에 그냥 가져오면 된다
 
-즉, 재귀는 O(2^n)이 걸리지만. 배열을 사용하면 값을 가져오는데 O(1)이 걸리기 때문에 훨씬 효율적이다 
+즉, **재귀는 O(2^n)** 이 걸리지만. 배열을 사용하면 **처음 연산 이후** 값을 가져오는데 **O(1)** 이 걸리기 때문에 훨씬 효율적이다 
 
 
 
