--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -42,10 +42,15 @@
 
 즉, **재귀는 O(2^n)** 이 걸리지만. 배열을 사용하면 **처음 연산 이후** 값을 가져오는데 **O(1)** 이 걸리기 때문에 훨씬 효율적이다 
 
+<br/>
 
+## 동적 프로그래밍 적용 성질 
 
+동적 프로그래밍을 적용하는 문제는 아래와 같은 두 성질이 있다 
 
+- 최적 부분 구조 :  큰 문제의 최적 솔루션에 **작은 문제의 최적 솔루션이 포함**, 즉 하위 레벨로 갔을 때 **해답이 존재해야 함**
 
+- 중복되는 부분 문제 : 재귀적 해법으로 풀면 같은 문제에 대한 **재귀호출이 심하게 중복되는** 문제 
 
 
 
