--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -52,7 +52,23 @@
 
 - 중복되는 부분 문제 : 재귀적 해법으로 풀면 같은 문제에 대한 **재귀호출이 심하게 중복되는** 문제 
 
+<br/>
 
+## 동적 프로그래밍 예시 
+
+재귀 호출을 활용한 동적 프로그래밍 예시는 아래와 같다 
+
+![image](https://github.com/user-attachments/assets/0267ecc7-742f-4e6c-86a0-9e03b9463a29)
+
+- 재귀 호출을 사용하지만, 미리 계산한 값이 있는지 확인하여 중복 연산을 피함
+
+- 이러한 방식도 동적 프로그래밍의 일종
+
+<br/>
+
+이와 같은 방식을 **하향식(Top-down)** 방식이라고하며, 앞서 다룬 것과 같이 i=1부터 계산하면서 올라가는 방식은 **상향식(Bottom-up)** 방식이라 함
+
+상향식이 더 자주 활용되나 둘 다 동적 프로그래밍의 범주에 속한다 
 
 
 
