--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -4,7 +4,7 @@
 
 동적 프로그래밍의 목적은 재귀를 사용했을 때 같은 연산을 반복해야하는 비효율적인 연산을 해결하기 위해 **계산된 값을 메모리에 저장해** 두 번 다시 계산하지 않기 위함이다 
 
-큰 문제의 해답에 **더 작은 문제의 해답**이 포함된 경우를 **최적 부분 구조(Optimal Substructure)** 를 가진다고 한다
+큰 문제의 해답에 **더 작은 문제의 최적의 해답**이 포함된 경우를 **최적 부분 구조(Optimal Substructure)** 를 가진다고 한다
 
 <br/>
 
