--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -70,8 +70,39 @@
 
 상향식이 더 자주 활용되나 둘 다 동적 프로그래밍의 범주에 속한다 
 
+<br/>
 
+## 행렬 경로 문제 
 
+문제 상황 : 양수 원소들로 구성된 n×n 행렬이 주어지고, 행렬의 좌상단에서 시작하여 우하단까지 이동하는 상황을 가정한 문제
+
+**이동 방법 (제약조건)**
+
+- 오른쪽이나 아래쪽으로만 이동할 수 있다
+
+- 왼쪽, 위쪽, 대각선 이동은 허용하지 않는다
+
+<br/>
+
+**목표**
+
+행렬의 좌상단에서 시작하여 우하단까지 이동하되, 방문한 칸에 있는 수들을 더한 값이 최대화되도록 한다
+
+![image](https://github.com/user-attachments/assets/1a96ffb7-ea46-4ed0-ab49-a12945da1060)
+
+위 문제가 동적 프로그래밍과 관련이 있는 이유는 점차적으로 **최적의 해답으로** 향하기 때문이다
+
+처음 a칸 -> b칸 -> ..  -> k칸으로 이동할 때, 각 칸의 수가 누적이 된 채로 다음 칸을 계산한다 
+
+이 방식은 피보나치와 유사하며 동적 프로그래밍으로 접근할 수 있다. 
+
+<br/>
+
+추가적으로, 최적 부분 구조에서 더 작은 문제의 **최적의 해답**을 찾는 것이였는데 피보나치는 경로가 일정하고 규칙적이여서 단 하나만 존재하였다. 
+
+그래서 그 경로가 결국 최적의 해가 된 것인데 
+
+행렬 경로 문제는 다양하게 접근할 수 있고, 최종적으로 도달했을 때 각 경로마다 결과가 다를 수 있으므로 이 중 최적의 해를 구해야 한다 
 
 
 
