--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -90,7 +90,19 @@
 
 ![image](https://github.com/user-attachments/assets/1a96ffb7-ea46-4ed0-ab49-a12945da1060)
 
-위 문제가 동적 프로그래밍과 관련이 있는 이유는 점차적으로 **최적의 해답으로** 향하기 때문이다
+<br/>
+
+**행렬 경로 문제 코드**
+
+```ruby
+matrixPath(i, j)
+{
+    if (i == 0 or j == 0) then return 0;
+    else return m[i][j] + max(matrixPath(i-1, j), matrixPath(i, j-1));
+}
+```
+
+위 문제가 동적 프로그래밍과 관련이 있는 이유는 **재귀함수**로 되어있고, 점차적으로 **최적의 해답으로** 향하기 때문이다
 
 처음 a칸 -> b칸 -> ..  -> k칸으로 이동할 때, 각 칸의 수가 누적이 된 채로 다음 칸을 계산한다 
 
