--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -1,4 +1,4 @@
-## 동적 프로그래밍
+## 동적 프로그래밍(DP)
 
 **동적 프로그래밍** : 큰 문제의 해답에 **더 작은 문제의 해답**이 포함되어 있으며, 이를 재귀호출로 구현할 때 같은 해답을 구하기 위한 중복 호출이 다수 발생하는 경우에 활용하는 문제해결 기법
 
@@ -102,6 +102,14 @@ matrixPath(i, j)
 }
 ```
 
+- m[i][j] : 행렬의 각 칸에 있는 숫자
+
+- c[i][j] : (1,1)에서 시작해서 (i,j)에 도달할 수 있는 최대 점수
+
+- 점수는 이동 경로 중 방문한 칸의 수를 누적해서 계산함
+
+<br/>
+
 위 문제가 동적 프로그래밍과 관련이 있는 이유는 **재귀함수**로 되어있고, 점차적으로 **최적의 해답으로** 향하기 때문이다
 
 처음 a칸 -> b칸 -> ..  -> k칸으로 이동할 때, 각 칸의 수가 누적이 된 채로 다음 칸을 계산한다 
@@ -116,14 +124,37 @@ matrixPath(i, j)
 
 행렬 경로 문제는 다양하게 접근할 수 있고, 최종적으로 도달했을 때 각 경로마다 결과가 다를 수 있으므로 이 중 최적의 해를 구해야 한다 
 
+<br/>
+
+**행렬 경로 문제 코드 결과**
+
+![IMG_3153](https://github.com/user-attachments/assets/3b4579ef-d462-4222-a270-ff998ac73347)
+
+이렇게 코드를 만들면, 시간복잡도가 **O(2^(n+m))** 이 소요돼서 너무 오래 걸린다 (n x m 행렬)
+
+<br/>
+
+## 행결 경로 문제 & DP
 
 
+```ruby
+matrixPath(n) 
+▷(n, n)에 이르는 최고점수 
+{ 
 
+for i ← 0 to n
+ c[i, 0] ← 0; 
 
+for j ← 1 to n
+ c[0, j] ← 0; 
 
+for i ← 1 to n
+ for j ← 1 to n
+ c[i, j] ← mij + max(c[i-1,  j], c[i,  j-1]); 
 
-
-
+return c[n, n]; 
+}
+```
 
 
 
