--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -94,13 +94,7 @@
 
 **행렬 경로 문제 코드**
 
-```ruby
-matrixPath(i, j)
-{
-    if (i == 0 or j == 0) then return 0;
-    else return m[i][j] + max(matrixPath(i-1, j), matrixPath(i, j-1));
-}
-```
+![image](https://github.com/user-attachments/assets/17a0d789-e040-4240-baff-a9533ceb1c9c)
 
 - m[i][j] : 행렬의 각 칸에 있는 숫자
 
@@ -143,18 +137,20 @@ matrixPath(n)
 { 
 
 for i ← 0 to n
- c[i, 0] ← 0; 
+    c[i, 0] ← 0; 
 
 for j ← 1 to n
- c[0, j] ← 0; 
+    c[0, j] ← 0; 
 
 for i ← 1 to n
- for j ← 1 to n
- c[i, j] ← mij + max(c[i-1,  j], c[i,  j-1]); 
+    for j ← 1 to n
+       c[i, j] ← mij + max(c[i-1,  j], c[i,  j-1]); 
 
 return c[n, n]; 
 }
 ```
+
+![IMG_3154](https://github.com/user-attachments/assets/597139cf-2094-4810-8f7b-c986807dc827)
 
 
 
