--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -128,8 +128,9 @@
 
 <br/>
 
-## 행결 경로 문제 & DP
+## 행렬 경로 문제 & DP
 
+위에서 행렬 경로 문제를 아래와 같이 DP로 코드를 작성하면 결국 행렬의 모든 칸을 검사히기 때문에 **Θ(𝑛2)** 의 시간 복잡도를 가지며 행렬의 총 원소 수에 대해서 선형 시간으로 볼 수 있다 
 
 ```ruby
 matrixPath(n) 
