--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -1,4 +1,4 @@
-## 동적 프로그래밍(DP)
+## 동적 프로그래밍(Dynamic Programming, DP)
 
 **동적 프로그래밍** : 큰 문제의 해답에 **더 작은 문제의 해답**이 포함되어 있으며, 이를 재귀호출로 구현할 때 같은 해답을 구하기 위한 중복 호출이 다수 발생하는 경우에 활용하는 문제해결 기법
 
@@ -153,7 +153,11 @@ return c[n, n];
 
 ![IMG_3154](https://github.com/user-attachments/assets/597139cf-2094-4810-8f7b-c986807dc827)
 
+<br/>
 
+## 돌 놓기 문제
+
+돌 놓기 문제도 
 
 
 
