--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -157,8 +157,37 @@ return c[n, n];
 
 ## 돌 놓기 문제
 
-돌 놓기 문제도 
+돌 놓기 문제는 3 × 𝑛 행렬의 각 칸에 양 또는 음의 정수가 기록되어 있으며, 해당 행렬에 돌을 놓는 상황이다
 
+돌을 놓을 때의 제약조건은 다음과 같다 
+
+- 가로나 세로로 인접한 두 칸에 동시에 조약돌을 놓을 수 없다
+
+- 각 열에는 적어도 하나 이상의 조약돌을 놓는다
+
+<br/>
+
+목표: 돌이 놓인 자리에 있는 수들의 **합이 최대**가 되도록 돌 놓기
+
+![image](https://github.com/user-attachments/assets/5b6f6baa-6136-466d-96ef-ff771c0dab51)
+
+<br/>
+
+**예시**
+
+![image](https://github.com/user-attachments/assets/544b23da-bd9d-42fa-927f-c45011eea3ed)
+
+<br/>
+
+돌 놓기 문제에서 임의의 열을 채울 수 있는 패턴은 아래와 같이 4가지가 존재한다 
+
+![image](https://github.com/user-attachments/assets/67c26a6c-21ed-4440-807f-cda42660562f)
+
+<br/>
+
+패턴별로 서로 인접한 열에서 양립할 수 있는 패턴들을 정리해보면 아래와 같다 
+
+![image](https://github.com/user-attachments/assets/65121e32-3250-4bfb-9e7e-d1d35350c578)
 
 
 
