--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -187,6 +187,8 @@ return c[n, n];
 
 패턴별로 서로 인접한 열에서 양립할 수 있는 패턴들을 정리해보면 아래와 같다 
 
+직사각형 아래에 표시된 숫자가 패턴의 번호이다 
+
 ![image](https://github.com/user-attachments/assets/65121e32-3250-4bfb-9e7e-d1d35350c578)
 
 
