--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -191,6 +191,8 @@ return c[n, n];
 
 ![image](https://github.com/user-attachments/assets/65121e32-3250-4bfb-9e7e-d1d35350c578)
 
+즉, i = 1번째인 열부터 시작하여(처음 시작하는 열) 다음 열로 갈 때 만약 현재 패턴이 1이라면 다음 패턴으로 2 또는 3만 올 수 있고, 이때 최대 합을 구하여 비교하는 방식으로 코드를 작성할 수 있다 
 
+아래 코드를 살펴보자 
 
 
