--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -195,4 +195,28 @@ return c[n, n];
 
 아래 코드를 살펴보자 
 
+<br/>
+
+```ruby
+pebble(i, p)
+▷i열이 패턴 p로 놓일 때의 i열까지의 최대 점수 합 구하기
+▷w[i, p] : i 열이 패턴 p로 놓일 때 i열에 돌이 놓인 곳의 점수 합.  p = {1, 2, 3, 4}
+{
+    if (i == 1)
+        return w[1, p];
+    else {
+        max ← -∞;
+
+        for q ← 1 to 4 {
+            if (패턴 q가 패턴 p와 양립) {
+                tmp ← pebble(i - 1, q);
+                if (tmp > max)
+                    max ← tmp;
+            }
+        }
+
+        return (max + w[i, p]);
+    }
+}
+```
 
