--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -205,11 +205,11 @@ pebble(i, p)
     if (i == 1)
         return w[1, p];
     else {
-        max ← -∞;
+        max ← -∞;  ▷ 초기 max값을 그냥 작은 수로 놓겠다는 의미
 
         for q ← 1 to 4 {
             if (패턴 q가 패턴 p와 양립) {
-                tmp ← pebble(i - 1, q);
+                tmp ← pebble(i - 1, q);      ▷재귀 실행 -> 답을 구하고 다음 코드로 넘어감 
                 if (tmp > max)
                     max ← tmp;
             }
