--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -208,15 +208,38 @@ pebble(i, p)
         max ← -∞;  ▷ 초기 max값을 그냥 작은 수로 놓겠다는 의미
 
         for q ← 1 to 4 {
-            if (패턴 q가 패턴 p와 양립) {
+            if (패턴 q가 패턴 p와 양립) {    ▷ 현재 패턴이 이전 패턴과 서로 조건이 맞다면 if문 통과, 즉 양립하는 모든 패턴을 검사함
                 tmp ← pebble(i - 1, q);      ▷재귀 실행 -> 답을 구하고 다음 코드로 넘어감 
                 if (tmp > max)
-                    max ← tmp;
+                    max ← tmp; 
             }
         }
 
-        return (max + w[i, p]);
+        return (max + w[i, p]);              ▷ 현재 노드 + 이전 패턴의 최대 값
     }
 }
 ```
+
+<br/>
+
+위 코드의 재귀 함수는 다음과 같이 진행된다 
+
+재귀 함수가 내려오다 i=1이 되면 해당 노드의 값을 반환한다 (by if (i == 1) -> return w[1, p];)
+
+만약 처음 시작할 때 돌을 (1,1)에 놓고 다음 열에는 (2,3)에 놓는다면,  상황은 아래와 같다 
+
+```ruby
+pebble(2, 3) → pebble(1, 1) 호출 → w[1][1] 반환
+```
+
+<br/>
+
+그럼, pebble(2,3)은 다음과 같이 계산이 된다 
+
+```ruby
+max = w[1][1]   ← 이전 결과
+pebble(2, 3) = max + w[2][3]  ← 자기 열의 점수 더함
+```
+
+위의 과정과 같이 for문은 1~4의 패턴을 모두 확인하며, 가능한 패턴을 모두 검사하여 최종 max을 도출하는 방식이다 
 
