--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -226,7 +226,11 @@ pebble(i, p)
 
 재귀 함수가 내려오다 i=1이 되면 해당 노드의 값을 반환한다 (by if (i == 1) -> return w[1, p];)
 
-만약 처음 시작할 때 돌을 (1,1)에 놓고 다음 열에는 (2,3)에 놓는다면,  상황은 아래와 같다 
+만약 처음 시작할 때 돌을 (1,1)에 놓는다면, 다음 열에는 (2,2)와 (2,3)에 놓을 수 있다
+
+즉, 여기서 for문의 if문이 성립이 된다 
+
+그럼 (2,3)에 상황을 예시로 들겠다. 상황은 아래와 같다 
 
 ```ruby
 pebble(2, 3) → pebble(1, 1) 호출 → w[1][1] 반환
@@ -234,7 +238,7 @@ pebble(2, 3) → pebble(1, 1) 호출 → w[1][1] 반환
 
 <br/>
 
-그럼, pebble(2,3)은 다음과 같이 계산이 된다 
+위 코드의 pebble(2,3)은 다음과 같이 계산이 된다 
 
 ```ruby
 max = w[1][1]   ← 이전 결과
