--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -226,7 +226,7 @@ pebble(i, p)
 
 재귀 함수가 내려오다 i=1이 되면 해당 노드의 값을 반환한다 (by if (i == 1) -> return w[1, p];)
 
-만약 처음 시작할 때 돌을 (1,1)에 놓는다면, 다음 열에는 (2,2)와 (2,3)에 놓을 수 있다
+만약 처음 시작할 때 돌을 **(1,1)**에 놓는다면, 다음 열에는 **(2,2)와 (2,3**에 놓을 수 있다
 
 즉, 여기서 for문의 if문이 성립이 된다 
 
@@ -245,5 +245,5 @@ max = w[1][1]   ← 이전 결과
 pebble(2, 3) = max + w[2][3]  ← 자기 열의 점수 더함
 ```
 
-위의 과정과 같이 for문은 1~4의 패턴을 모두 확인하며, 가능한 패턴을 모두 검사하여 최종 max을 도출하는 방식이다 
+위의 과정과 같이 for문은 1~4의 패턴을 모두 확인하며, 가능한 패턴을 모두 검사하여 **최종 max을 도출**하는 방식이다 
 
