--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -195,6 +195,16 @@ return c[n, n];
 
 아래 코드를 살펴보자 
 
+## 최적 부분 구조 확인 
+
+![image](https://github.com/user-attachments/assets/db6ff4d9-5937-4e29-9462-edaa268a746c)
+
+개념 복습을 하자면, 위 공식이 최적 부분 구조를 확인하는 공식인 이유는 전체 문제의 최적해가, **그 하위 문제들의 최적해**로 구성할 수 있는지 확인하는 공식이다 
+
+i열까지의 최적 점수(c[i][p])를 구하려면, 반드시 i-1열까지의 최적 점수(c[i-1][q])들 중 하나를 선택해야 한다
+
+다시 말해, **작은 문제(i-1열까지의 최적 점수)** 가 있어야 큰 문제(i열까지의 최적 점수)를 구할 수 있는데, 이는 딱 **최적 부분 구조**의 정의에 부합하기 때문이다
+
 <br/>
 
 ```ruby
@@ -247,3 +257,6 @@ pebble(2, 3) = max + w[2][3]  ← 자기 열의 점수 더함
 
 위의 과정과 같이 for문은 1~4의 패턴을 모두 확인하며, 가능한 패턴을 모두 검사하여 **최종 max을 도출**하는 방식이다 
 
+이것을 일반화하면 아래와 같다 
+
+![image](https://github.com/user-attachments/assets/79a42e43-a92a-42cd-971c-1ec994af934f)
