--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -193,7 +193,7 @@ return c[n, n];
 
 즉, i = 1번째인 열부터 시작하여(처음 시작하는 열) 다음 열로 갈 때 만약 내가 현재 열의 맨 위에다가 돌을 두고 싶다면(패턴이 1인 경우), 이전 패턴이 2 또는 3이여햐만 하고, 이때 최대 합을 구하여 비교하는 방식으로 코드를 작성할 수 있다 
 
-아래 코드를 살펴보자 
+아래 최적 부분 구조와 재귀 알고리즘을 살펴보자 
 
 ## 최적 부분 구조 확인 
 
@@ -207,6 +207,7 @@ i열까지의 최적 점수(c[i][p])를 구하려면, 반드시 i-1열까지의 
 
 <br/>
 
+## 재귀 알고리즘 (DP x)
 ```ruby
 pebble(i, p)
 ▷i열이 패턴 p로 놓일 때의 i열까지의 최대 점수 합 구하기
