--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -229,6 +229,15 @@ pebble(i, p)
         return (max + w[i, p]);              ▷ 현재 노드 + 이전 패턴의 최대 값
     }
 }
+
+pebbleSum(n)
+ ▷n 열까지 조약돌을 놓은 방법 중 최대 점수 합 구하기
+{
+     return max { pebble(n, p) } ;
+ }
+
+ ▷ p =1,2,3,4
+ ▷ pebble(i, 1), …, pebble(i, 4) 중 최대값이 최종적인 답
 ```
 
 <br/>
