--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -272,3 +272,92 @@ pebble(2, 3) = max + w[2][3]  ← 자기 열의 점수 더함
 <br/>
 
 ![image](https://github.com/user-attachments/assets/79a42e43-a92a-42cd-971c-1ec994af934f)
+
+<br/>
+
+## 돌 놓기 문제 & 재귀 결과 
+
+![image](https://github.com/user-attachments/assets/4e42825c-e488-45ca-8362-9b0f3160889e)
+
+돌 놓기 문제에서 재귀를 사용했을 때 다음과 같이 막대한 양의 반복 연산을 진행해야 한다 
+
+이것을 DP 알고리즘을 통해 해결하면 아래와 같다 
+
+<br/>
+
+## 돌 놓기 문제 & DP 
+
+돌 놓기 문제를 DP를 활용하여 다음과 같이 풀 수 있다 
+
+```ruby
+pebble(n)
+{
+    for p ← 1 to 4
+        peb[1][p] ← w[1][p];    ▷ peb 배열에 저장하며 불러오는 형식 
+
+    for i ← 2 to n
+        for p ← 1 to 4
+            peb[i][p] ← max { peb[i-1][q] } + w[i][p];
+                        // 단, q는 p와 양립하는 패턴
+
+    return max { peb[n][p] } ;  // p = 1, 2, 3, 4
+}
+```
+
+<br/>
+
+## 돌 놓기 문제 & DP 시간복잡도 
+
+![image](https://github.com/user-attachments/assets/a4235526-43ad-423f-a899-63104659ee85)
+
+주어진 코드는 배열에 저장을 하며 올라가는 방식이기 때문에, 배열에서 불러오는 시간은 상수 시간이 걸린다. 
+
+따라서 시간복잡도는 **Θ(n)** 만큼 소요된다
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
