--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -314,8 +314,59 @@ pebble(n)
 
 따라서 시간복잡도는 **Θ(n)** 만큼 소요된다
 
+<br/>
 
+## 퀴즈 
 
+![image](https://github.com/user-attachments/assets/6a8b4263-2249-47d0-8148-3e7ad792490c)
+
+![IMG_3161](https://github.com/user-attachments/assets/ea807a96-f3ae-4d84-9a5e-e766f713db50)
+
+위 공식을 참고하여 D(4)를 구해보면, D(4) = D(3) + D(2)이고, 이것은 아래와 같이 진행된다 
+
+![image](https://github.com/user-attachments/assets/1153c238-1a06-47b8-88b7-9630b564f538)
+
+<br/>
+
+D(3)는 처음에 구한 D(1) + D(2)로 구할 수 있고, 이것을 이용하여 base case D(1)과 D(2)가 **초기 2칸의 모든 경우의 수** 이기 때문에
+
+n = 4일 때 **n = 3일 때와 n = 2일 때로 분류** 하는 것이다. (n = 3일 때 남는 공간은 1이고 이것은 D(1), n = 2일 때 남는 공간은 2이고 이것은 D(2))
+
+n = 3일때는 이전 차례에서 구해왔기 때문에 계속 i번째의 경우의 수는 **i-1번째의 모든 경우의 수 + i-2번째의 모든 경우의 수**로 구할 수 있다
+
+따라서 점화식은 **D(n) = D(n-1) + D(n-2)** 이다
+
+<br/>
+
+이 문제가 전하고자 하는 바는 **n을 작게 쪼갠 뒤 모든 경우를 생각**하는 것이다
+
+즉, 첫번째로 n을 작게 쪼개어 가능한 모든 경우를 생각하고, 이것을 다음 단계에서 어떻게 활용할 지를 고민하며 식을 만들어 가는 것이 규칙을 찾는 공식이다
+
+<br/>
+
+## 도미노 & DP 알고리즘 
+
+다음은 위 문제를 DP 알고리즘으로 표현한 코드이다 
+
+```ruby
+def domino_tiling(n):
+    # Base cases
+    if n == 1:
+        return 1
+    if n == 2:
+        return 2
+
+    # DP 배열 생성 (0부터 n까지, 총 n+1개)
+    dp = [0] * (n + 1)            ▷ D(1)부터 시작하기 때문에 n개를 만들어 버리면 총 n-1개만 사용 가능함
+    dp[1] = 1  # D(1)
+    dp[2] = 2  # D(2)
+
+    # 점화식 적용: D(n) = D(n-1) + D(n-2)
+    for i in range(3, n + 1):            ▷ base case에서 D(1)과 D(2)를 정의했기 때문에, for문은  i = 3 부터 시작 
+        dp[i] = dp[i - 1] + dp[i - 2]
+
+    return dp[n]
+```
 
 
 
