--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -32,5 +32,22 @@
 
 - (A1 … An-1)An
 
-위 경우들 중 어느 경우가 가장 효율적인지를 **최적 부분구조**를 활용하여 구할 수 있음
+위 경우들 중 어느 경우가 가장 효율적인지를 **최적 부분구조**를 활용하여 구할 수 있다
 
+<br/>
+
+현재 상황에서의 행렬곱 형태를 **일반화하면** (𝐴1…𝐴𝑘)(𝐴𝑘+1…𝐴𝑛) 으로 표현 가능하다
+
+그리고 이 때 특정 𝑘에 대한 곱셈 비용은 **앞쪽 괄호로 엮인** 행렬곱의 비용, **뒤쪽 괄호로 엮인** 행렬곱의 비용 및 괄호 안의 연산이 모두 끝난 **두 행렬을 곱하는 비용**을 더하면 계산할 수 있다
+
+![image](https://github.com/user-attachments/assets/d28c2906-f615-4bb5-aef6-13aaa51f31b3)
+
+<br/>
+
+주어진 공식에서 pi-1 * pk * pj가 의미하는 바는 **행렬의 곱센 연산 횟수**이다
+
+만약 3x2 행렬과 2x1 행렬을 곱한다면, 최종 행렬은 3x1 행렬이 되는데, 이때 **두 행렬을 연결시키는 숫자만큼** 각 요소를 반복해서 결과가 나온 것이다 
+
+즉, 3x1개의 요소를 각각 2번의 곱셈을 이용하여 출력한 것이므로, 총 3 x 2 x 1 번의 결과가 수행이 된 것이다 
+
+이를 일반화 하여 **pi-1 * pk * pj** 라고 표현한다
