--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -51,3 +51,29 @@
 즉, 3x1개의 요소를 각각 2번의 곱셈을 이용하여 출력한 것이므로, 총 3 x 2 x 1 번의 결과가 수행이 된 것이다 
 
 이를 일반화 하여 **pi-1 * pk * pj** 라고 표현한다
+
+<br/>
+
+이것을 이용하여 재귀함수를 살펴 보자 
+
+<br/>
+
+## 행렬 곱셈 문제 & 재귀 함수 
+
+```ruby
+rMatrixChain(i, j)
+▷ 행렬곱 A_i ... A_j 를 구하는 최소 비용 구하기
+{
+    if (i == j) then return 0;          ▷ 행렬이 하나뿐인 경우, 곱셈 필요 없음 → 비용 0
+
+    min ← ∞;
+
+    for k ← i to j - 1 {
+        q ← rMatrixChain(i, k) + rMatrixChain(k + 1, j) + p_{i-1} * p_k * p_j;   ▷ 두 부분의 최소 비용 + 최종 곱셈 비용
+
+        if (q < min) then min ← q;
+    }
+
+    return min;
+}
+```
