--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -66,7 +66,7 @@ rMatrixChain(i, j)
 {
     if (i == j) then return 0;          ▷ 행렬이 하나뿐인 경우, 곱셈 필요 없음 → 비용 0
 
-    min ← ∞;
+    min ← ∞;                            ▷ 최소 값을 의미하는 임의의 작은 수를 의미
 
     for k ← i to j - 1 {
         q ← rMatrixChain(i, k) + rMatrixChain(k + 1, j) + p_{i-1} * p_k * p_j;   ▷ 두 부분의 최소 비용 + 최종 곱셈 비용
@@ -77,3 +77,21 @@ rMatrixChain(i, j)
     return min;
 }
 ```
+
+주어진 행렬 곱셈 문제를 재귀 함수로 풀어나간 과정을 살펴 보면 
+
+i == j 일 때는 자기 자신을 연산하는 것이므로 비용이 들지 않는다.
+
+이후 for문을 살펴 보면, 각각 i와 j는 고정이 되어 있고, **사이에 k가 움직이며** 모든 경우를 계산하는 방식이다 
+
+<br/>
+
+위에서 일반화시킨 pi-1 * pk * pj를 이용하여 k로 분리하였을 때 값을 계산하고, 이후 재귀적으로 실행되어 
+
+**i ~ k** 와 **k + 1 ~ j** 를 또 다시 for문을 통해서 분리하여 계산하는 과정을 반복한다 
+
+추가적으로 재귀 함수를 호출할 때 해당 함수의 j역할을 하는 k와 for문의 k의 변수가 같아지는데, 둘의 관계는 독립적이라 문제가 되지 않는다
+
+
+
+
