--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -132,7 +132,7 @@ matrixChain(n)
     for i ← 1 to n
         m[i, i] ← 0;  ▷ 행렬이 하나뿐인 경우의 비용은 0 (ex m[1,1] , m[2,2], ...)
 
-    for r ← 1 to n - 1   ▷ r: 행렬 길이를 결정하는 변수 (ex: r = 1이면 j = i+1이므로, 길이가 2인 행렬의 비용을 계산 -> bottom up 방식으로 올라감)
+    for r ← 1 to n - 1   ▷ r: 행렬 길이를 결정하는 변수 (ex: r = 1이면 j = i+1이므로, m[i,j]는 길이가 2인 행렬의 비용을 계산 -> bottom up 방식으로 올라감)
         for i ← 1 to n - r {
             j ← i + r;
             m[i, j] ← min {m[i, k] + m[k+1, j] + p_{i-1} * p_k * p_j}
