--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -143,6 +143,10 @@ matrixChain(n)
 }
 ```
 
+위 코드와 같이 r, i, k에 대한 for문에 의해 (알고리즘 형식으로 표기해서 k에 대한 for문 생략)
+
+**행렬 곱셈 문제를 DP로 풀면 시간복잡도는 O(n³)이 된다** 
+
 ## p.21 부터 공부 
 
 
