--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -147,13 +147,30 @@ matrixChain(n)
 
 **행렬 곱셈 문제를 DP로 풀면 시간복잡도는 O(n³)이 된다** 
 
-## p.21 부터 공부 
+<br/>
 
+## 행렬 곱셈 문제 & DP 구현
 
+```ruby
+Matrix-Chain-Order(p, n)
+    let m[1 : n, 1 : n] and s[1 : n - 1, 2 : n] be new tables // m과 s 테이블을 초기화한다
+    for i = 1 to n                                            // 길이가 1인 행렬 곱셈은 비용이 0이므로 초기화
+        m[i, i] = 0                                           // 대각 원소를 0으로 설정
+    for l = 2 to n                                            // 체인의 길이를 2부터 n까지 증가시킴
+        for i = 1 to n - l + 1                                // 시작 인덱스 설정
+            j = i + l - 1                                     // 종료 인덱스 설정
+            m[i, j] = ∞                                       // 초기 값을 무한대로 설정
+            for k to j - 1                                    // k를 i에서 j-1까지 순회
+                q = m[i, k] + m[k + 1, j] + pi-1 * pk * pj    // 비용 계산: 두 부분의 비용 + 현재의 곱셈 비용
+                if q < m[i, j]                                // 더 작은 비용이 발견되면
+                    m[i, j] = q                               // 최소 비용 업데이트
+                    s[i, j] = k                               // 최적 분할 지점 저장
+    return m and s                                            // 최종 비용과 최적 분할 지점 테이블 반환
+```
 
+- m[i, j] :  행렬 A_i부터 A_j까지 곱셈할 때 발생하는 **최소 비용** 
 
-
-
+- s[i, j] :  행렬 곱셈을 최적으로 분할하는 위치 (ex: s[2, 4] = 3이라면, A_2부터 A_4까지의 최적 곱셈 순서는 k=3에서 나누는 것이 최적이라는 의미)
 
 
 
