--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -160,7 +160,7 @@ Matrix-Chain-Order(p, n)
         for i = 1 to n - l + 1                                // 시작 인덱스 설정
             j = i + l - 1                                     // 종료 인덱스 설정
             m[i, j] = ∞                                       // 초기 값을 무한대로 설정
-            for k to j - 1                                    // k를 i에서 j-1까지 순회
+            for k = i to j - 1                                    // k를 i에서 j-1까지 순회
                 q = m[i, k] + m[k + 1, j] + pi-1 * pk * pj    // 비용 계산: 두 부분의 비용 + 현재의 곱셈 비용
                 if q < m[i, j]                                // 더 작은 비용이 발견되면
                     m[i, j] = q                               // 최소 비용 업데이트
