--- a/알고리즘 8-2주차.md
+++ b/알고리즘 8-2주차.md
@@ -172,6 +172,29 @@ Matrix-Chain-Order(p, n)
 
 - s[i, j] :  행렬 곱셈을 최적으로 분할하는 위치 (ex: s[2, 4] = 3이라면, A_2부터 A_4까지의 최적 곱셈 순서는 k=3에서 나누는 것이 최적이라는 의미)
 
+**코드 과정**
+
+1. 초기에는 i=1 j=2 이므로 첫번째 행렬과 두번째 행렬의 계산 비용을 구한다, m[i, j] = ∞는 각 시행을 하기 전 값을 초기화 하는 단계이다 
+
+2. i=1 j=2 일 때, q = m[i, k] + m[k + 1, j] + pi-1 * pk * pj 에서 k = 1만 가능하므로, q = m[1, 1] + m[2, 2] + p0 * p1 * p2 이다
+
+3. m[1, 1] 과 m[2, 2]는 초기 for문에서 모두 0으로 초기화를 하여 총 2개의 행렬 곱셈 비용만 계산하고 이것을 m[1,1]에 저장한다
+
+4. i = 1 일 때 과정이 끝나면, i = 2, j = 3일 때 계산 비용을 검사한다
+
+여기서 **핵심**은 초기에 길이가 2인 for문을 시작할 때 m[i,j]가 임의의 큰 양수로 초기화가 된 후 k가 하나만 나오기 때문에 그 값이 최소값이 되지만
+
+길이가 3개 이상 부터는 m[i,j]가 임의의 큰 양수로 초기화가 된 후 k = 1, k = 2, .. 일 때를 모두 비교하여 그 중 **가장 작은 값을 m[i,j]의 최소 비용**으로 (if문 내부의 코드 : m[i,j] = q) 정하는 것이다 
+
+<br/>
+
+추가적으로 곱셈의 과정은 아래와 같다 
+
+![image](https://github.com/user-attachments/assets/4f99aa6a-a255-4aea-bb7d-3f3128997c29)
+
+step 2 과정을 보면 A1 x A2 의 결과는 10 x 30 이고, 이것을 기반으로 A3과 곱해주면 10 x 30 x 40 = 18000이 나온다 
+
+**따라서 두 곱셈 과정을 더해주는 것이다**
 
 
 
