--- a/알고리즘 9주차.md
+++ b/알고리즘 9주차.md
@@ -3,3 +3,116 @@
 **최장 공통 부분 순서** : 두 문자열에 공통적으로 들어있는 공통 부분순서 중 가장 긴 것을 찾는 문제
 
 ![image](https://github.com/user-attachments/assets/75cb6f92-be93-41dd-a1f2-b882e09b78fc)
+
+<br/>
+
+## 주요 정리 증명  
+
+![image](https://github.com/user-attachments/assets/7900cc46-f0d3-4a6c-8e82-64a90cb5d8c0)
+
+<br/>
+
+## 최장 공통 부분 순서 재귀적 구현 
+
+![image](https://github.com/user-attachments/assets/8e166207-01d4-4d03-8878-52520a1c54fc)
+
+```ruby
+LCS(m, n) 
+▷두 문자열 Xm과 Yn의 LCS 길이 구하기 
+{ 
+    if (m = 0 or n = 0) thenreturn 0; 
+    else if (xm= yn) then return LCS(m-1, n-1) + 1;   
+    else return max(LCS(m-1, n), LCS(m, n-1)); 
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
