--- a/알고리즘 9주차.md
+++ b/알고리즘 9주차.md
@@ -26,13 +26,11 @@ LCS(m, n)
 }
 ```
 
+<br/>
 
+위와 같이 재귀적으로 호출하면 **중복 호출의 문제가 발생한다**
 
-
-
-
-
-
+![IMG_3189](https://github.com/user-attachments/assets/8ab4ce42-f345-4587-a2dc-b815e3ad04b5)
 
 
 
