--- a/알고리즘 9주차.md
+++ b/알고리즘 9주차.md
@@ -32,7 +32,35 @@ LCS(m, n)
 
 ![IMG_3189](https://github.com/user-attachments/assets/8ab4ce42-f345-4587-a2dc-b815e3ad04b5)
 
+<br/>
 
+## 최장 공통 부분 순서 & DP 구현 
+
+```ruby
+LCS(m, n) 
+▷두 문자열 Xm과 Yn의 LCS 길이 구하기 
+{ 
+for i ← 0 to m
+    C[i,  0] ← 0; 
+for j ← 0 to n
+    C[0,  j] ← 0; 
+for i ← 1 to m
+    for j ← 1 to n
+        if (xi= yj) then C[i,  j] ← C[i-1,  j-1] + 1;
+        else C[i, j] ← max(C[i-1,  j], C[i,  j-1]); 
+return C[m, n]; 
+} 
+```
+
+![image](https://github.com/user-attachments/assets/0c785c85-005d-46f2-bc70-21785b9cfba1)
+
+<br/>
+
+## 예시 
+
+아래 최장 공통 부분 순서를 이용하여 "BCBA"를 출력한 과정을 보여주는 예시이다
+
+![image](https://github.com/user-attachments/assets/a16120bf-6717-44a1-ad98-3e6ed29db12a)
 
 
 
