--- a/알고리즘 9주차.md
+++ b/알고리즘 9주차.md
@@ -62,17 +62,25 @@ return C[m, n];
 
 ![image](https://github.com/user-attachments/assets/a16120bf-6717-44a1-ad98-3e6ed29db12a)
 
+**각 방향의 의미**
 
+- 대각선(↖) : **두 문자가 일치**할 때, 공통 부분 수열의 길이가 1 증가하므로, 이전 대각선 방향으로 이동
 
+- 위쪽 방향(↑) : 현재 위치에서 X[i]와 Y[j]가 다를 때, **c[i-1][j]의 값이 더 크다면** 위쪽 값을 선택
 
+- 왼쪽 방향(←) : 현재 위치에서 X[i]와 Y[j]가 다를 때, **c[i][j-1]의 값이 더 크다면** 왼쪽 값을 선택 4
 
+<br/>
 
+행렬이 완성된 이후 **추적의 시발점은 테이블의 우하단 (C[m][n])에서 시작**한다
 
+C[m][n]는 두 문자열 X와 Y의 최장 공통 부분 수열(LCS)의 길이가 저장된 위치이다 
 
+대각선(↖)으로 이동하면, 두 문자가 일치했다는 의미이므로 **해당 문자를 LCS에 추가**한다 
 
+**즉, 대각선이 LCS에 추가하는 기준이다**
 
-
-
+위쪽이나 왼쪽으로 가는 것은 동일한 원소가 존재하지 않아서 값이 큰 방향으로 움직이는 것이다 
 
 
 
