--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -72,6 +72,7 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 ## 인접 행렬 (Adjacency matrix)
 
+![IMG_3191](https://github.com/user-attachments/assets/4fadf02e-67f6-4a99-9d89-cc90a6be6fa2)
 
 **인접 행렬** : 𝑁이 정점의 총 수를 나타낼 때, 𝑁×𝑁로 그래프를 표현한 것 
 
@@ -95,6 +96,25 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 ![IMG_3190](https://github.com/user-attachments/assets/b9af4710-0cea-4dbf-9eb2-c52d543da226)
 
+<br/>
+
+## 인접 행렬 - 가중치가 있는 무향 그래프의 예시
+
+아래 예시도 마찬가지로 방향이 없기 때문에 **대칭적이다**
+
+![image](https://github.com/user-attachments/assets/f082d1d2-ad3e-45a9-a313-eafced2f2464)
+
+<br/>
+
+## 인접 행렬 - 유향 그래프 예시 
+
+![IMG_3192](https://github.com/user-attachments/assets/fa1590de-ad48-44bf-8751-46dc9f66c4f1)
+
+<br/>
+
+## 인접 행렬 - 가중치가 있는 유향 그래프의 예시
+
+![image](https://github.com/user-attachments/assets/4cb9838b-17e6-4d6e-8857-1b35e12a680f)
 
 
 
