--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -116,6 +116,31 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 ![image](https://github.com/user-attachments/assets/4cb9838b-17e6-4d6e-8857-1b35e12a680f)
 
+<br/>
+
+## 그래프 장단점 
+
+**인접 행렬**을 이용했을 때의 각각의 **장단점**은 다음과 같다 
+
+**장점** : 이해하기 쉽고 간선의 존재 여부를 Θ(1)만에 파악 가능
+
+**단점** :  그래프 정보를 저장하기 위해서만 **Θ(n^2) 시간이 소요**되고 (NxN 행렬이기 때문) **메모리 사용량도 크다**는 단점이 존재
+
+또한, 간선의 밀도가 높은 그래프에서는 인접 행렬을 사용한 표현이 적합하나, **정점의 수 대비 간선이 적은 경우**에는 **대부분의 원소가 0으로 이루어지기 때문에** 인접 행렬을 이용한 표현은 **비효율적**이다 
+
+이렇게 대부분 원소가 0으로 이루어진 현상을 **스케일 프리 네트워크 라고한다**
+
+<br/>
+
+## 스케일 프리 네트워크 
+
+**스케일 프리 네트워크** : 특정 노드(허브, Hub)들이 매우 많은 연결을 가지며, **대부분의 다른 노드들은 몇 개의 연결**만 가지는 네트워크 구조를 의미한다 
+
+스케일 프리 네트워크에서 인접 행렬을 사용하면 **메모리 낭비가 매우 심하다**
+
+만약 1만 개의 노드 중 1%만 연결되어 있다면, **대부분의 인접 행렬 값이 0이 된다**
+
+예를 들어, 10,000개의 노드라면 **100,000,000개의 메모리 공간이 필요**하지만 이것의 거의 표현할 수 없는 단계에 도달한다 
 
 
 
