--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -142,8 +142,17 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 예를 들어, 10,000개의 노드라면 **100,000,000개의 메모리 공간이 필요**하지만 이것의 거의 표현할 수 없는 단계에 도달한다 
 
+<br/>
 
+## 인접 리스트(Adjacency list)
 
+**인접 리스트** : N개의 연결 리스트로 각 정점에서 시작하는 간선들을 표현하는 것을 의미한다
+
+- i번째 리스트는 정점 j에 인접한 정점들을 리스트로 연결해 놓음
+
+- 가중치 있는 그래프의 경우 리스트에 가중치도 보관한다
+
+![image](https://github.com/user-attachments/assets/50da59b4-6bf7-46b6-9c55-ce1f923ec584)
 
 
 
