--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -152,20 +152,9 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 - 가중치 있는 그래프의 경우 리스트에 가중치도 보관한다
 
-![image](https://github.com/user-attachments/assets/50da59b4-6bf7-46b6-9c55-ce1f923ec584)
+![IMG_3193](https://github.com/user-attachments/assets/d9d585fd-d026-4891-b2ce-6a8395221812)
 
-
-
-
-
-
-
-
-
-
-
-
-
+![IMG_3195](https://github.com/user-attachments/assets/bb5f9805-6509-42f6-81f4-bc4d3b99fe1d)
 
 
 
