--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -156,6 +156,25 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 ![IMG_3195](https://github.com/user-attachments/assets/bb5f9805-6509-42f6-81f4-bc4d3b99fe1d)
 
+<br/>
+
+## 인접리스트 장단점 
+
+**장점** : 인접 리스트는 메모리 사용량 측면에서는 인접 행렬보다 효율적일 수 있음
+
+단점 : 특정 정점에 대해 이어진 간선을 검색하고자 하는 경우 **worst case로는 Θ(𝑛)의 시간이 소요**될 수 있다
+
+이에 **인접 리스트**는 **간선의 밀도가 낮을 때 유용**하다 
+
+<br/>
+
+정리하면 
+
+- **인접 행렬**은 간선의 밀도가 **높을 때** 유용
+
+- **인접 리스트**는 간선의 밀도가 **낮을 때** 유용
+
+
 
 
 
