--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -174,10 +174,23 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 - **인접 리스트**는 간선의 밀도가 **낮을 때** 유용
 
+<br/>
 
+## 그래프 순회 (Graph Traversal)
 
+**그래프 순회** : 그래프 내의 **모든 정점을 한번씩 방문**하는 연산을 의미
 
+컴퓨터 과학에서 그래프 탐색(그래프 검색이라고도 함)은 그래프의 각 정점을 방문(확인 및/또는 업데이트)하는 과정을 의미한다
 
+<br/>
+
+대표적으로 아래와 같은 두 가지 방법이 존재함
+
+- **BFS** (Breadth-First Search) : 너비 우선 탐색
+
+- **DFS** (Depth-First Search, DFS) : 깊이 우선 탐색
+
+위의 두 가지 방법은 모두 연결 그래프(connected graph, 모든 두 정점 사이에 경로가 존재)를 가정한 것이며, 분리된 그래프에 대해서는 **부분 그래프 수 만큼 실행해야 모든 정점을 탐색 가능**
 
 
 
