--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -192,19 +192,61 @@ ex) 철수와 영희는 서로 아는 사이이다
 
 위의 두 가지 방법은 모두 연결 그래프(connected graph, 모든 두 정점 사이에 경로가 존재)를 가정한 것이며, 분리된 그래프에 대해서는 **부분 그래프 수 만큼 실행해야 모든 정점을 탐색 가능**
 
+<br/>
 
+## 너비 우선 탐색 (BFS, Breadth-First Search)
 
+**너비 우선 탐색 (BFS, Breadth-First Search)** : 루트 노드(혹은 다른 임의의 노드)에서 시작해서 **인접한 노드를 먼저 탐색**하는 방법
 
+즉 , 시작 정점으로부터 **가까운 정점을 먼저 방문**하고 **멀리 떨어져 있는 정점을 나중에** 방문하는 순회 방법
 
+ex) 지구 상에 존재하는 모든 친구 관계를 그래프로 표현한 후 Ash 와 Vanessa 사이에 존재하는 경로를 찾는 경우 BFS가 적절 
 
+<br/>
 
+## 너비 우선 탐색(BFS)의 특징
 
+- BFS 는 **재귀적으로 동작하지 않는다**
 
+- 이 알고리즘을 구현할 때 가장 큰 차이점은 그래프 탐색의 경우 어떤 노드를 방문했었는지 **여부를 반드시 검사**해야한다는 것이다 이를 검사하지 않을 경우 무한 루프에 빠질 위험이 있다
 
+- BFS 는 방문한 노드들을 차례로 저장한 후 꺼낼 수 있는 자료 구조인 **큐(Queue)를 사용함**
 
+- **선입선출(FIFO) 원칙**으로 탐색
 
+<br/>
 
+## BFS 과정 
 
+![IMG_3198](https://github.com/user-attachments/assets/64a402a1-993e-412a-b98b-f909a6fe0eff)
+
+<br/>
+
+![IMG_3199 (1)](https://github.com/user-attachments/assets/47a6f9f0-23d5-4e3f-a0f7-7f422fc9d4aa)
+
+<br/>
+
+## 너비 우선 탐색 (BFS) 알고리즘
+
+```ruby
+BFS(G, s)
+{
+    for each v ∈ V - {s}
+        visited[v] ← NO;
+    visited[s] ← YES;
+    enqueue(Q, s);
+    
+    while (Q ≠ ∅) {
+        u ← dequeue(Q);
+        for each v ∈ L(u) 
+            if (visited[v] = NO) {
+                visited[v] ← YES;
+                enqueue(Q, v);
+            }
+        
+    }
+}
+```
 
 
 
