--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -384,9 +384,27 @@ void aDFS(v, List result) {
 }
 ```
 
+<br/>
 
+## 신장 트리 & 최소 신장 트리 
 
+**트리 (Tree)** : **싸이클이 없는** 연결된 무방향 그래프
 
+- n개의 정점을 가지면 **반드시 n-1개의 간선**을 가진다 (n-1 초과이면 싸이클이 생김)
+
+- **모든 정점이 연결**되어 있으며, **하나의 경로**만 존재한다
+
+<br/>
+
+**그래프 G의 신장 트리 (Spanning tree)** : 무방향 연결 그래프 G에서 모든 정점을 포함하면서 **사이클 없이 최소 간선**만으로 이루어진 트리
+
+![스크린샷 2025-05-15 124943](https://github.com/user-attachments/assets/5bf2435b-59ac-4a20-8dfc-d9fb4898c600)
+
+<br/>
+
+**최소 신장 트리** : 신장 트리들 중 **간선의 합이 최소**인 신장 트리
+
+![image](https://github.com/user-attachments/assets/f17a69b9-5bd4-404e-8b89-4af65e6fc81b)
 
 
 
