--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -2,11 +2,17 @@
 
 **프림 알고리즘** : MST(최소 신장 트리)를 구하는 알고리즘의 일종이며, 첫 정점을 시작으로 가장 가까운 이웃들을 추가해나가며 만들어 나간다
 
-![IMG_3239](https://github.com/user-attachments/assets/193ec9c0-65b0-401f-b583-75465c5c2d3a)
+![스크린샷 2025-05-18 111842](https://github.com/user-attachments/assets/f81f585e-4d14-4ec2-b1f9-e2838c3b22ec)
+
+![스크린샷 2025-05-18 111855](https://github.com/user-attachments/assets/f699d4a2-bc16-48c0-995f-18f1f9863e89)
+
+![스크린샷 2025-05-18 111904](https://github.com/user-attachments/assets/0401144b-db32-4f78-babe-36db707e83d8)
+
+![스크린샷 2025-05-18 111916](https://github.com/user-attachments/assets/02ed4890-52df-4292-bf99-f1d727bd7863)
 
 <br/>
 
-## 프림 알고리즘 구현 
+**프림 알고리즘**
 
 ```ruby
 Prim (G, r)
@@ -19,6 +25,36 @@ Prim (G, r)
     }
 }
 ```
+
+<br/>
+
+## 프림 알고리즘 구현 
+
+```ruby
+Prim(G, r)
+▷ G=(V, E): 주어진 그래프
+▷ r: 시작으로 삼을 정점
+{
+    S ← ∅                           ▷ S : 정점 집합
+    for each u ∈ V
+        dₓ ← ∞ ;                     ▷ 시작 정점을 제외한 모든 정점의 거리를 임의의 큰 수로 초기화
+    dᵣ ← 0 ;                         ▷ 시작 정점은 0으로 초기화
+    
+    while (S ≠ V) {                  ▷ n회 순환된다
+        u ← extractMin(V - S, d);
+        S ← S ∪ {u};
+        
+        for each v ∈ L(u)           ▷ L(u) : u로부터 연결된 정점들의 집합
+            if (v ∈ V - S and wᵤᵥ < dᵥ) then dᵥ ← wᵤᵥ;          ▷ v ∈ V - S : v가 아직 MST 집합 S에 포함되지 않은 정점, 
+    }                                                            ▷ wᵤᵥ < dᵥ u에서 v로 가는 간선의 가중치가 v로의 최소 거리보다 작은지 비교 
+}
+
+extractMin(Q, d)
+{
+    ▷ 집합 Q에서 d값이 가장 작은 정점 u를 리턴한다;
+}
+```
+
 
 
 
