--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -35,12 +35,12 @@ Prim(G, r)
 ▷ G=(V, E): 주어진 그래프
 ▷ r: 시작으로 삼을 정점
 {
-    S ← ∅                           ▷ S : 정점 집합
-    for each u ∈ V
+    S ← ∅                           ▷ S : MST에 포함된 정점들의 집합
+    for each u ∈ V                  ▷ V : 전체 노드 집합 
         dₓ ← ∞ ;                     ▷ 시작 정점을 제외한 모든 정점의 거리를 임의의 큰 수로 초기화
     dᵣ ← 0 ;                         ▷ 시작 정점은 0으로 초기화
     
-    while (S ≠ V) {                  ▷ n회 순환된다
+    while (S ≠ V) {                  ▷ n회 순환 (모든 정점이 MST에 포함되지 않을 때까지 반복)     
         u ← extractMin(V - S, d);
         S ← S ∪ {u};
         
@@ -54,6 +54,23 @@ extractMin(Q, d)
     ▷ 집합 Q에서 d값이 가장 작은 정점 u를 리턴한다;
 }
 ```
+
+프림 알고리즘에서 거리 계산의 기준은 r과의 거리를 잰다 
+
+![image](https://github.com/user-attachments/assets/fd54525b-fc02-4e4d-a689-226877c9f659)
+
+위 예시로 설명하자면, 시작점을 A라고 했을 때 A와 연결되어 있는 B와 C중 **거리가 가장 짧은** A → C (3)을 선택한다 (이것이 while문의 첫번째 코드와 두번째 코드)
+
+이후 while문의 for문의 주석을 보면 u로부터 연결된 정점의 집합이라고 되어있는데 u는 a로부터 거리가 가장 짧은 c가 될 것이고 
+
+if문을 통해 S 집합에 (MST에 포함된 정점들의 집합) 포함되지 않는 요소들 중에서 (정점 A와 C제외) C와 연결된 정점인 B, D, E과의 거리를 계산한다 
+
+<br/>
+
+또한, if문을 보면 위 예시에서 W(u,v)는 C와 연결된 정점의 거리를 의미하고 dv는 시작점인 r과 해당 노드의 거리를 의미힌다 
+
+즉, r에서 해당 노드로 가는 것보다 **C를 거쳐 갔음에도 이 거리가 더 짧다면**, C를 거쳐가 간 거리를 **최소 길이로 정하기 위함**이다 
+
 
 
 
