--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -71,6 +71,52 @@ if문을 통해 S 집합에 (MST에 포함된 정점들의 집합) 포함되지 
 
 즉, r에서 해당 노드로 가는 것보다 **C를 거쳐 갔음에도 이 거리가 더 짧다면**, C를 거쳐가 간 거리를 **최소 길이로 정하기 위함**이다 
 
+<br/>
+
+## 프림 알고리즘 시간 복잡도 
+
+**프림 알고리즘 시간 복잡도 : O(|E|log|V|)**
+
+<br/>
+
+**시간복잡도 풀이 과정**
+
+Prim 알고리즘의 주요 연산은 두 가지로 나눌 수 있다
+
+- 정점 선택 (extractMin)
+
+- 간선 업데이트 (Relaxation)
+
+<br/>
+
+**step 1 : 정점 선택 (extractMin)**
+
+Prim 알고리즘에서는 가장 작은 비용의 간선을 찾기 위해 **우선순위 큐(Heap)** 를 사용한다 
+
+이 과정에서 매번 extractMin 연산이 일어난다
+
+Heap 자료구조에서 최소값을 찾는 연산은 **O(log V)**의 시간 복잡도가 걸리고 모든 정점을 순회하기 때문에, V번 실행
+
+따라서, 이 단계의 시간 복잡도는 O(V⋅logV)이다 
+
+<br/>
+
+**step 2 : 간선 업데이트 (Relaxation)**
+
+Prim 알고리즘의 매 단계에서 현재 선택된 정점과 연결된 모든 간선을 탐색한다 
+
+간선의 개수는 최대로 E개가 될 수 있다
+
+각각의 간선 탐색에서 우선순위 큐를 업데이트하면, 시간복잡도는 O(E⋅logV)이다 
+
+<br/>
+
+**step 3 : 최종 계산**
+
+일반적으로 **간선의 수(E)** 가 **정점의 수(V)** 보다 많으므로
+
+O(VlogV) + O(ElogV) ≈ **O(ElogV)** 이다
+
 
 
 
