--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -157,6 +157,13 @@ Kruskal (G, r)
  }
 ```
 
+<br/>
+
+## 크루스칼 알고리즘 시간복잡도 
+
+![스크린샷 2025-05-18 123844](https://github.com/user-attachments/assets/d082b831-87ba-414d-b981-85fcd0ad7c9f)
+
+
 
 
 
