--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -161,10 +161,38 @@ Kruskal (G, r)
 
 ## 크루스칼 알고리즘 시간복잡도 
 
-![스크린샷 2025-05-18 123844](https://github.com/user-attachments/assets/d082b831-87ba-414d-b981-85fcd0ad7c9f)
+![IMG_3243](https://github.com/user-attachments/assets/9b3a9faf-0d7d-4c96-9a1e-1076c8911850)
 
+<br/>
 
+## 프림 알고리즘 및 크루스칼 알고리즘의 이론적 근거
 
+![image](https://github.com/user-attachments/assets/c4d927f2-8038-4438-b376-e79a00df21f5)
+
+![image](https://github.com/user-attachments/assets/b240a06c-a39a-49c6-88f5-ebef3eaa6e3b)
+
+<br/>
+
+**문제상황**
+
+그래프 G=(V,E)에서 최소 신장 트리(MST)를 찾고자 할 때,
+
+정점들을 두 집합 S와 V−S로 나누었을 때, S에서 V - S로 연결되는 간선 중 **가장 작은 가중치를 가진 간선**을 찾는다
+
+이 간선을 **최소 교차 간선(Minimum Crossing Edge)** 이라고 부른다 
+
+만약 (u,v)가 최소 교차 간선이라면 (u,v)를 포함하는 그래프 **G의 최소 신장 트리가 반드시 존재**한다. 이것을 증명해보자 
+
+<br/>
+
+**증명**
+임의의 최소 신장 트리 T가 가장 작은 간선 (u,v)를 포함하지 않다고 가정하자 
+
+또한, S와 V-S 사이의 간선 중 (u,v)보다 크기가 큰 임의의 간선을 (x,y) 라고 하자 
+
+이 상황에서 새로운 간선 (u, v)가 발견되었고, 이것이 (x, y)보다 가중치가 작다면, (x, y)를 제거하고 (u, v)를 추가하여 더 작은 최소 신장 트리를 만들 수 있다
+
+즉, (u,v)를 포함하고 잇지 않은 최소 신장 트리가 존재한다면 **반드시 이를 포함하는 최소 신장 트리로 바꿀 수 있다**
 
 
 
