--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -194,8 +194,36 @@ Kruskal (G, r)
 
 즉, (u,v)를 포함하고 잇지 않은 최소 신장 트리가 존재한다면 **반드시 이를 포함하는 최소 신장 트리로 바꿀 수 있다**
 
+<br/>
 
+## 위상정렬 
 
+**위상 정렬 (Topological Sorting)**
+
+**위상 정렬**은 **싸이클이 없는 유향 그래프**에서 정의되는 문제이다 
+모든 정점을 정렬하되 아래와 같은 조건을 만족하여야 함
+
+- 정점 x에서 정점 y로 가는 간선이 있으면 x는 반드시 y보다 앞에 위치해야 함
+
+- 복수의 위상 순서가 존재할 수 있다
+
+![IMG_3244](https://github.com/user-attachments/assets/29ca6b24-d372-4fec-a573-f167682d67b5)
+
+<br/>
+
+**알고리즘**
+
+```ruby
+topologicalSort1(G, v)
+{ 
+    for ← 1 to n { 
+        진입간선이 없는 정점 u를 선택한다;
+        A[i] ← u;
+        정점 u와, u의 진출간선을 모두 제거한다;
+    } 
+    ▷이 시점에 배열 A[1…n]에는 정점들이위상정렬되어 있다
+}
+```
 
 
 
