--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -225,11 +225,36 @@ topologicalSort1(G, v)
 }
 ```
 
+![IMG_3245](https://github.com/user-attachments/assets/74f6555f-dd77-4c93-98b5-bc7e78e42ed2)
+
+<br/>
+
+## 위상 정렬 시간복잡도 
 
 
+**위상 정렬 시간복잡도 : Θ(V+E)**
 
+위상 정렬은 다음의 두 가지 주요 단계로 이루어진다
 
+**1. 진입 차수가 0인 정점 찾기 (V번 반복)**
 
+모든 정점(노드)을 한 번씩 방문하면서, 진입 차수가 0인 노드를 찾는다
+
+이 과정은 V개의 정점을 검사하므로 O(V) 시간이 걸린다 
+
+<br/>
+
+**2. 간선 제거 (E번 반복)**
+
+정점을 제거하면서, 그 정점에서 나가는 모든 간선을 제거한다
+
+최악의 경우 모든 간선을 다 탐색해야 하므로 O(E) 시간이 걸린다
+
+<br/>
+
+**3. 최종 시간 복잡도**
+
+두 단계의 시간 복잡도를 더하면: O(V) + O(E) = **O(V+E)**
 
 
 
