--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -256,11 +256,49 @@ topologicalSort1(G, v)
 
 두 단계의 시간 복잡도를 더하면: O(V) + O(E) = **O(V+E)**
 
+<br/>
 
+## 위상 정렬 시간복잡도 세밀 분석
 
+![image](https://github.com/user-attachments/assets/6b0b5e16-f708-4f89-9747-054517403055)
 
+**해석**
 
+**Step 1 : 초기화**
 
+그래프의 모든 간선을 순회하면서, 진입 간선이 증가할 때마다 C[i] 값을 1씩 증가시킨다 
+
+이 과정은 그래프 탐색과 동일하므로 O(V + E) 시간이 소요된다
+
+<br/>
+
+**Step 2 : 진입 간선이 0인 정점 찾기**
+
+초기화가 완료되면, 모든 C[i]를 확인한다 
+
+만약 C[i] == 0이면, 이는 **진입 간선이 없는 정점**이라는 의미이다 
+
+이 정점을 **큐(Queue)** 에 넣는다 
+
+<br/>
+
+**Step 3: 정점 제거와 간선 업데이트**
+
+큐에서 정점을 하나씩 꺼내고, 꺼낸 정점에 연결된 **진출 간선**들을 탐색한다
+
+이 간선들을 제거하면서, 연결된 정점의 진입 간선 수를 1씩 감소시킨다 
+
+<br/>
+
+**Step 4 : 시간 복잡도 계산**
+
+- Step 1 : 모든 간선을 확인하면서 진입 간선 수를 기록: O(E)
+
+- Step 2 : 모든 정점을 확인하면서 진입 간선이 0인 정점을 찾음: O(V)
+
+- Step 3 : 큐에서 정점을 꺼내면서 연결된 간선을 제거: O(E)
+
+최종 시간 복잡도는 모든 정점과 간선을 한 번씩만 방문하기 때문에 **Θ(V+E)**이다
 
 
 
