--- a/알고리즘 11주차.md
+++ b/알고리즘 11주차.md
@@ -211,6 +211,8 @@ Kruskal (G, r)
 
 <br/>
 
+![image](https://github.com/user-attachments/assets/248b5785-3ee7-4710-a5bf-ff9916b8e3ee)
+
 **알고리즘**
 
 ```ruby
@@ -300,18 +302,32 @@ topologicalSort1(G, v)
 
 최종 시간 복잡도는 모든 정점과 간선을 한 번씩만 방문하기 때문에 **Θ(V+E)**이다
 
+<br/>
 
+## 위상 정렬 알고리즘 구현 
 
+```ruby
+topologicalSort2(G) 
+{ 
+    for each v∈V
+        visited[v] ← NO; 
+    for each v∈V                                ▷ 정점의 순서는 무관 
+        if (visited[v] = NO) then DFS-TS(v) ;
+ } 
+DFS-TS(v)  
+{ 
+    visited[v] ← YES; 
+    for each x∈L(v)                             ▷ L(v): v의 인접 리스트 
+        if (visited[x] = NO) then DFS-TS(x) ;
+    연결 리스트 R의 맨 앞에 정점 v를 삽입한다;
+ }
+```
 
+![IMG_3246](https://github.com/user-attachments/assets/18f3c77e-98fd-4b8d-9dd9-7acda48cc55e)
 
+![스크린샷 2025-05-18 220641](https://github.com/user-attachments/assets/cc8c6f87-a498-44ed-8520-e93b3cfb1ba9)
 
-
-
-
-
-
-
-
+![스크린샷 2025-05-18 220647](https://github.com/user-attachments/assets/9d508753-acd2-4b87-a4fb-764096f3ff4c)
 
 
 
