--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -1,1 +1,109 @@
 ## 강연결 요소 
+
+유향 그래프의 **모든 정점 쌍에 대해서 양방향으로 경로가 존재**하면 **강하게 연결**되었다고 함
+
+**강연결 요소** : 그래프 전체 대신 강하게 연결된 부분 그래프를 의미
+
+<br/>
+
+## 강연결 요소 과정 
+
+![IMG_3262](https://github.com/user-attachments/assets/33fcb0f3-2bbc-4940-8310-98eb5be1136b)
+
+![IMG_3261](https://github.com/user-attachments/assets/b94c61de-d3a4-423c-8ad5-7d65d36d15e7)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
