--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -1,4 +1,4 @@
-## 강연결 요소 
+## 강연결 요소 (Strongly connected component = SCC)
 
 유향 그래프의 **모든 정점 쌍에 대해서 양방향으로 경로가 존재**하면 **강하게 연결**되었다고 함
 
@@ -11,6 +11,26 @@
 ![IMG_3262](https://github.com/user-attachments/assets/33fcb0f3-2bbc-4940-8310-98eb5be1136b)
 
 ![IMG_3261](https://github.com/user-attachments/assets/b94c61de-d3a4-423c-8ad5-7d65d36d15e7)
+
+종료시간이 빠르다 : 그 노드가 탐색에서 가장 깊이 들어가 있지 않았다, 즉 **이어지는 노드가 많이 없다**
+
+종료시간이 느리다 : 그 노드가 탐색에서 가장 깊이 들어가 있다. 즉, **이어지는 노드가 많다**
+
+<br/>
+
+## 강연결 요소에서 역을 수행하는 이유
+
+**역방향 탐색 수행 이유** : 일반적인 **DFS로는 발견할 수 없는 강연결 요소(SCC)를 정확히 찾기** 위함이다
+
+일반적인 DFS는 출발 지점에서 갈 수 있는 모든 경로를 탐색한다
+
+하지만, 역방향 경로를 고려하지 않기 때문에, 실제로 **서로 강하게 연결된 정점들을 놓칠 수 있다**
+
+예를 들어, A → B → C가 있지만, C에서 A로 돌아오는 경로가 있는지 알 수 없다
+
+비유를 하자면, 높은 산에서 떨어지는 물이 아래에 도착하는 관계를 보면 우리는 위에서 아래로만 관계를 알 수 있지만 강연결 요소를 사용하면 아래에서 위로 올라가는 관계를 파악할 수 있다 
+
+
 
 
 
