--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -30,6 +30,17 @@
 
 비유를 하자면, 높은 산에서 떨어지는 물이 아래에 도착하는 관계를 보면 우리는 위에서 아래로만 관계를 알 수 있지만 강연결 요소를 사용하면 아래에서 위로 올라가는 관계를 파악할 수 있다 
 
+<br/>
+
+## 강연결 요소 특징 
+
+강연결 요소는 **유향 그래프(Directed Graph)** 에서 서로 강하게 연결된 노드들의 집합을 찾는다
+
+- SCC에 속한 노드들은 어떤 방향으로도 왕복이 가능하다는 특징이 존재
+
+- 예를 들어, A → B → C → A가 있다면, 이들은 서로 왕복이 가능하므로 같은 SCC에 속함
+
+이 알고리즘을 이용하면 실제로 우리가 웹 페이지 간의 하이퍼링크가 상호 연결된 구조를 분석할 때, SCC로 묶어서 서로 접근 가능한 그룹을 찾을 수 있다 
 
 
 
