--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -42,12 +42,29 @@
 
 이 알고리즘을 이용하면 실제로 우리가 웹 페이지 간의 하이퍼링크가 상호 연결된 구조를 분석할 때, SCC로 묶어서 서로 접근 가능한 그룹을 찾을 수 있다 
 
+<br/>
+
+## 최단 경로(중요)
+
+**최단 경로 문제** : 그래프에서 두 정점 사이의 경로 중에서 가중치 합이 가장 작은 경로를 찾는 문제를 말한다 
+
+무향 그래프는 양쪽 방향으로 간선이 다 있다고 볼 수도 있음
+
+최단 경로 문제는 **단일 시작점**에서 할 것인지, **모든 정점 쌍**에서 할 것인지에 따라 분류할 수 있다
+
+**1. 단일 시작점 최단 경로 문제**
+
+- 음의 가중치를 허용하지 않는 경우 -> **다익스트라 알고리즘**
+
+- 음의 가중치를 허용하는 경우 -> **벨만-포드 알고리즘**
 
 
+✓ 그러나 싸이클에서의 가중치 합이 음이 되면 안 된다. 그러면 해당 사이클을 반복하여 
+특정 경로의 가중치 합을 음의 무한대로 보낼 수 있기 때문
+③ 싸이클이 없는 그래프의 경우
+2. 모든 정점 쌍에 대한 최단 경로 문제 -> 플로이드-워샬 알고리즘
 
-
-
-
+## p.13부터 공부 
 
 
 
