--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -54,17 +54,25 @@
 
 **1. 단일 시작점 최단 경로 문제**
 
-- 음의 가중치를 허용하지 않는 경우 -> **다익스트라 알고리즘**
+- 음의 가중치를 허용하지 않는 경우 (**0이상의 양수**) -> **다익스트라 알고리즘**
 
-- 음의 가중치를 허용하는 경우 -> **벨만-포드 알고리즘**
+- 음의 가중치를 **허용하는 경우** -> **벨만-포드 알고리즘**
 
+- **싸이클이 없는** 그래프의 경우
 
-✓ 그러나 싸이클에서의 가중치 합이 음이 되면 안 된다. 그러면 해당 사이클을 반복하여 
-특정 경로의 가중치 합을 음의 무한대로 보낼 수 있기 때문
-③ 싸이클이 없는 그래프의 경우
-2. 모든 정점 쌍에 대한 최단 경로 문제 -> 플로이드-워샬 알고리즘
+단, 음의 가중치를 허용한다고해서 **싸이클에서의 가중치 합이 음이 되면 안 된다**
 
-## p.13부터 공부 
+이렇게 되면 그러면 해당 사이클을 반복하여 특정 경로의 가중치 합을 음의 무한대로 보낼 수 있기 때문이다 
+
+ex: A → B → C → A라는 사이클의 가중치가 -3이라면, 이 경로를 반복하면 계속 값이 작아지기 때문에 최단 경로를 정의할 수 없음
+
+<br>
+
+**2. 모든 정점 쌍에 대한 최단 경로 문제** 
+
+이 경우는 **플로이드-워샬 알고리즘**을 사용한다 
+
+## p.14부터 공부 
 
 
 
