--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -122,6 +122,11 @@ extractMin(Q, d[])
 
 ![IMG_3266](https://github.com/user-attachments/assets/e17f6122-f350-43da-a516-bd1dfaffbb43)
 
+<br/>
+
+## 잘못된 예시 
+
+![image](https://github.com/user-attachments/assets/b00a466b-4a51-4820-b997-b7bf43c5c275)
 
 
 
