--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -96,7 +96,7 @@ Dijkstra(G, r)                       // G: 그래프 (V, E), r: 시작 정점
         S ← S ∪ {u} ;                // u의 최단 거리를 확정하고 S에 추가
 
         for each v ∈ L(u)            // u와 인접한 정점 v에 대해 반복
-            if (v ∉ S and d[u] + w[u, v] < d[v]) then {   // u를 통해 v로 가는 경로가 더 짧다면
+            if (v ∈ V-S and d[u] + w[u, v] < d[v]) then {   // u를 통해 v로 가는 경로가 더 짧다면
                 d[v] ← d[u] + w[u, v] ;                   // d[v]를 더 짧은 거리로 갱신 (이완)
                 prev[v] ← u ;                             // prev[v]에 u 저장 → 경로 추적을 위함
             }
@@ -110,7 +110,7 @@ extractMin(Q, d[])
 }
 ```
 
-위 코드에서 v ∉ S and d[u] + w[u, v] < d[v] 단계는 V-S 집합의 노드중에서 시작점에서 해당 노드로 접근하는 것보다 u를 거쳐서 더 많은 경로를 추가했음에도 해당 노드에 도달한 거리가 더 짧다면 그 값을 최단 경로 비용으로 지정하자는 것이다 
+위 코드에서 v ∈ V-S and d[u] + w[u, v] < d[v] 단계는 V-S 집합의 노드중에서 시작점에서 해당 노드로 접근하는 것보다 u를 거쳐서 더 많은 경로를 추가했음에도 해당 노드에 도달한 거리가 더 짧다면 그 값을 최단 경로 비용으로 지정하자는 것이다 
 
 또한 위 코드는 prev[v]로 더 짧은 경로를 저장만 해두고 따로 return은 하지 않았다
 
