--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -8,9 +8,11 @@
 
 <br/>
 
-최적 부분 구조를 피보나치 수열로 예를 들면, fib(5) = fib(4) + fib(3)으로 나눠질 때, fib(4)와 fib(3)를 구하려면 더 내려가야하고 fib(2) 또는 fib(1)에 도달했을 때 값을 구하는 구조를 의미한다 
+최적 부분 구조를 피보나치로 예를 들자면, f(n) = f(n-1) + f(n-2) 에서 f(n)은 이것의 작은 문제인 f(n-1)과 f(n-2)의 해답을 이용하여 풀 수 있고, f(n-1)과 f(n-2)는 base case 부터 올라가며 답을 얻을 수 있다
 
-중요한 것은 식을 쪼갠 다음에 각각 **작은 문제의 최적 답**만 잘 모으면 해답이 존재하는 것이 최적 부분 구조이다
+큰 문제의 해답에 더 작은 문제의 해답이 포함된다는 것은 **단순히 base case가 존재한다고 만족하는 것이 아니라**, 이 base case를 이용하여 **f(n)을 구하기 위한 모든 하위 단계를 구할 수 있어야 한다**
+
+만약 base case를 알고 있지만 식 변형에 의해 f(5) = f(4) + f(3)에서 f(4)를 구할 수 없는 구조라면, f(5)를 구하기 위한 더 작은 모든 문제들의 해답이 완벽하게 존재하지 않으므로 최적 부분 구조가 아닌 것이다
 
 <br/>
 
