--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -147,7 +147,7 @@ for j ← 1 to n
 
 for i ← 1 to n
     for j ← 1 to n
-       c[i, j] ← mij + max(c[i-1,  j], c[i,  j-1]); 
+       c[i, j] ← mij + max(c[i-1,  j], c[i,  j-1]);     ▷ mij의 데이터만 주어지고 C는 모든 위치까지의 최대 경로가 저장됨
 
 return c[n, n]; 
 }
