--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -213,7 +213,7 @@ i열까지의 최적 점수(c[i][p])를 구하려면, 반드시 i-1열까지의 
 ```ruby
 pebble(i, p)
 ▷i열이 패턴 p로 놓일 때의 i열까지의 최대 점수 합 구하기
-▷w[i, p] : i 열이 패턴 p로 놓일 때 i열에 돌이 놓인 곳의 점수 합.  p = {1, 2, 3, 4}
+▷w[i, p] : i 열이 패턴 p로 놓일 때 i열에 돌이 놓인 곳의 점수 합  p = {1, 2, 3, 4}
 {
     if (i == 1)
         return w[1, p];
