--- a/알고리즘 8-1주차.md
+++ b/알고리즘 8-1주차.md
@@ -248,7 +248,7 @@ pebbleSum(n)
 
 재귀 함수가 내려오다 i=1이 되면 해당 노드의 값을 반환한다 (by if (i == 1) -> return w[1, p];)
 
-만약 처음 시작할 때 돌을 **(1,1)**에 놓는다면, 다음 열에는 **(2,2)와 (2,3**에 놓을 수 있다
+만약 처음 시작할 때 돌을 (1,1)에 놓는다면, 다음 열에는 **(2,2)와 (2,3)** 에 놓을 수 있다
 
 즉, 여기서 for문의 if문이 성립이 된다 
 
