--- a/알고리즘 10주차.md
+++ b/알고리즘 10주차.md
@@ -319,6 +319,8 @@ BFS는 각 정점 u의 인접 리스트 L(u)를 순회한다
 
 즉, 한 방향으로 끝까지 도달할 때 까지 탐색하고 모두 탐색하면 돌아가서 다른 방향으로 끝까지 가는 방식이다 
 
+**DFS 시간복잡도 : Θ(|V|+|E|)** (V: 정점 수, E: 간선 수)
+
 <br/>
 
 ## 깊이 우선 탐색 (DFS, Depth-First Search) 특징 
