--- a/알고리즘 12주차.md
+++ b/알고리즘 12주차.md
@@ -6,6 +6,22 @@
 
 <br/>
 
+```ruby
+ stronglyConnectedComponent(G) 
+{ 
+1. 그래프 G에 대해 DFS를 수행하여 각 정점 v의 완료시간 f [v]를 계산한다
+
+2. G의 모든 간선들의 방향을 뒤집는다
+
+3. DFS(그래프 G의 간선 역방향)를 수행하되 시작점을 1번에서 구한 f[v]가 가장 큰 정점으로 잡는다
+
+4. 3과정에서에서 만들어진 분리된 트리들 각각을 강연결요소로 리턴한다
+
+}
+```
+
+<br/>
+
 ## 강연결 요소 과정 
 
 ![IMG_3262](https://github.com/user-attachments/assets/33fcb0f3-2bbc-4940-8310-98eb5be1136b)
