--- a/알고리즘 13주차.md
+++ b/알고리즘 13주차.md
@@ -31,6 +31,18 @@ BellmanFord(G, r)  // G는 그래프, r은 시작 정점
 
 그래프 자체에서는 싸이클이 존재할 수 있지만, 벨만-포드 알고리즘을 이용하여 최단 경로를 찾을 때 **|V|-1번**만 검사해도 경로를 만들 수 있다 
 
+<br/>
+
+## 만약 |V|개를 탐색한다면?
+
+만약 |V|개 이상의 간선으로 이루어진 최단 경로가 존재한다면 경로 상에 **반드시 하나 이상의 사이클이 존재할 것이다**
+
+이 경우, 최단 경로 문제에서 사이클에서의 가중치 합은 음이 될 수 없으므로 (음의 무한대로 향해서 답을 구할 수 없음) 반드시 0 이상이여야 한다
+
+그러나  만약 사이클에서의 가중치 합이 0 초과라면 사이클을 제외하여 경로 전체의 가중치 합을 낮출 수 있으므로 **최단 경로라는 가정을 위배하게 된다**
+
+가중치 합이 0이어도 사이클을 제외하여 더 적은 수의 간선으로 최단 경로를 만들 수 있어서 **오류가 발생한다**
+
 **예시**
 
 ```ruby
@@ -42,6 +54,37 @@ C → E → C (가중치 합 = 0)
 A → B → C → E → C → D 는 가중치가 같거나 더 클 뿐, 쓸데없는 경로이기 때문에 싸이클을 제외하기 위해 |V|-1개의 간선만을 탐색한다
 ```
 
+<br/>
+
+## 벨만 포드 & 다익스트라 알고리즘 차이점
+
+아래 정점 A에서 시작하는 그래프가 있다고 생각해보자 
+
+![image](https://github.com/user-attachments/assets/62043019-16ae-4604-a9b1-3d64791824ee)
+
+위 그래프를 다익스트라 알고리즘을 이용하여 최단 경로를 구한다면
+
+1. A 집합 최단 경로 -> 정점 B : (A,B) 집합 생성
+
+2. (A,B) 집합 최단 경로 -> 정점 C : (A,B,C) 집합 생성
+
+3. (A,B,C) 집합 최단 경로 -> 정점 E : (A,B,C,D) 집합 완성
+
+이렇게 구할 수 있다 
+
+<br/>
+
+**하지만 직관적으로 그래프를 보면** D를 거치고 C로 가는 비용은 3이기 때문에 **이 경로가 더 빠르다**
+
+<br/>
+
+## 다익스트라 문제점
+
+**다익스트라 알고리즘**은 **현재까지 발견된 최단 경로**를 기반으로 작동한다 
+
+최단 경로라고 판단하면 집합으로 묶은 후 **포함된 정점 사이의 거리는 계산을 하지 않는다**
+
+즉, **한 번 최단으로 판단된 경로**는 그 이후에 **변경되지 않아서 더 짧은 경로를 찾을 수 없다는 것**이 다익스트라 알고리즘의 문제점이다
 
 
 
